French translation initial commit

--- a/backmatter/bibliography.tex
+++ b/backmatter/bibliography.tex
@@ -1,15 +1,17 @@
-\chapter*{About the Bibliography}
+\chapter*{À propos de la bibliographie}
 \pdfbookmark{Bibliography}{bibliography}
 
-Today, plenty of books have been published about Bitcoin. However, most of the
-conversation -- and thus most of the resources of interest -- happen online.
+Aujourd'hui, beaucoup de livres ont été publiés sur Bitcoin. Pourtant, la
+plupart des conversations -- et donc la plupart des contenus dignes d'intérêt --
+se passent en ligne.
 
 \paragraph{}
-The following bibliography lists books, papers, and online resources alike. If
-the resource has a URL associated with it, the URL was alive and kicking in
-October 2019, since I was able to successfully access the resource in question.
-If any of the following URLs leads to a dead page, I'm sorry. Please let me
-know\footnote{\url{https://dergigi.com/contact}} so I can update the link(s).
+La bibliographie qui va suivre établit indifféremment une liste de livres,
+d'articles et de contenus en ligne. Si le contenu possède une URL associée, l'URL
+était accessible en Octobre 2019, puisque j'ai pu m'y rendre. Si l'une ou
+l'autre de ces URL venait à mener à une impasse, j'en suis désolé. Merci de me
+le faire savoir\footnote{\url{https://dergigi.com/contact}} afin que je puisse
+la mettre à jour.
 
 \paragraph{}
-P.S: Bitcoin and \href{https://ipfs.io/}{IPFS} fixes this.
+P.S. : Bitcoin et \href{https://ipfs.io/}{IPFS} règlent ça.
