--- a/frontmatter/ch0-00-preface.tex
+++ b/frontmatter/ch0-00-preface.tex
@@ -1,27 +1,30 @@
-\chapter*{Preface}
+\chapter*{Préface}
 
-Falling down the Bitcoin rabbit hole is a strange experience. Like many others,
-I feel like I have learned more in the last couple of years studying Bitcoin
-than I have during two decades of formal education.
+S'enfoncer dans le terrier du lapin Bitcoin est une expérience bizarre. Comme
+tant d'autres, j'ai l'impression que ces deux dernières années passées à étudier
+Bitcoin m'ont plus appris que deux décennies d'éducation classique.
 
-The following lessons are a distillation of what I’ve learned. First published
-as an article series titled \textit{“What I’ve Learned From Bitcoin,”} what follows
-can be seen as a third edition of the original series.
+Ces leçons forment la quintessence de ce que j'ai découvert. D'abord publié
+comme une série d'articles intitulée \textit{« Ce que Bitcoin m'a enseigné »},
+ce qui suit peut être vu comme la troisième édition de la série d'origine.
 
-Like Bitcoin, these lessons aren't a static thing. I plan to work on them
-periodically, releasing updated versions and additional material in the future.
+À l'instar de Bitcoin, ces leçons sont évolutives. Je compte revenir dessus
+régulièrement, en publiant plus tard des mises à jour et du contenu
+supplémentaire.
 
-Unlike Bitcoin, future versions of this project do not have to be backward
-compatible. Some lessons might be extended, others might be reworked or
-replaced.
+Contrairement à Bitcoin, les futures versions de ce projet ne seront pas
+nécessairement rétro-compatibles. Certaines leçons pourront être complétées,
+d'autres seront retravaillées voire même remplacées.
 
-Bitcoin is an inexhaustible teacher, which is why I do not claim that these
-lessons are all-encompassing or complete. They are a reflection of my personal
-journey down the rabbit hole. There are many more lessons to be learned, and
-every person will learn something different from entering the world of Bitcoin.
+Bitcoin est un professeur intarissable, c'est pour cela que je ne considère pas
+ces leçons comme exhaustives ou définitives. Elles sont le reflet de mon propre
+périple au cœur du terrier. Il existe bien d'autres leçons à tirer, de fait
+chaque personne qui entrera dans le monde de Bitcoin en retirera des
+connaissances différentes.
 
-I hope that you will find these lessons useful and that the process of learning
-them by reading won’t be as arduous and painful as learning them firsthand.
+J'espère que vous trouverez une utilité à ces leçons et que leur apprentissage
+par la lecture vous paraîtra moins pénible et douloureux que je ne l'ai parfois
+vécu par l'expérience.
 
 % <!-- Internal -->
 % [I]: {% post_url /bitcoin/2018-12-21-philosophical-teachings-of-bitcoin %}
