--- a/frontmatter/dedication.tex
+++ b/frontmatter/dedication.tex
@@ -5,7 +5,8 @@
 \thispagestyle{empty}
 \begin{center}
   \Large \emph{
-  Dedicated to my wife, my child, and all the children of this world. May
-  bitcoin serve you well, and provide a vision for a future worth fighting for.
+  Dédié à ma femme, à mon enfant, ainsi qu'à tous les enfants du monde. Puisse
+  Bitcoin vous soutenir et vous apporter la vision d'un futur qui vaille la
+  peine de s'engager.
   }
 \end{center}
