--- a/frontmatter/foreword.tex
+++ b/frontmatter/foreword.tex
@@ -1,62 +1,67 @@
-\chapter*{Foreword}
+\chapter*{Avant-propos}
 \pdfbookmark{Foreword}{foreword}
 
-Some call it a religious experience. Others call it Bitcoin.
+Certains appellent ça une expérience mystique. D'autres appellent ça Bitcoin.
 
-I first met Gigi in one of my spiritual homes -- Riga, Latvia -- the home of
-\textit{The Baltic Honeybadger} Conference, where the most fervent of the
-Bitcoin faithful make a yearly pilgrimage. After a deep lunchtime conversation,
-the bond Gigi and I forged was as set in stone as a Bitcoin transaction that was
-processed when we first shook hands a few hours prior.
+J'ai rencontré Gigi pour la première fois dans un de mes foyers spirituels --
+Riga, Lettonie -- patrie de la conférence \textit{The Baltic Honeybadger}, où
+les plus fervents fidèles de Bitcoin accomplissent un pèlerinage annuel. Après
+une profonde conversation autour d'un déjeuner, le lien que Gigi et moi avions
+tissé était aussi immuable qu'une transaction Bitcoin traitée quelques heures
+plus tôt lorsque nous nous sommes salués.
 
-My other spiritual home, Christ Church, Oxford, where I had the privilege to
-study for my MBA, was where I had my \enquote{Rabbit Hole} moment. Like Gigi, I
-transcended the economic, technical and social realms, and was spiritually
-enveloped by Bitcoin. After \enquote{buying high} in the November 2013 bubble,
-there were several extremely hard-learned lessons to be had in the relentlessly
-crushing and seemingly never-ending 3-year bear market. These 21 Lessons would
-indeed have served me very well in that time. Many of these lessons are simply
-natural truths that, to the uninitiated, are obscured by an opaque, fragile
-film. By the end of this book however, the fa\c{c}ade will fragment fiercely.
+Mon autre foyer spirituel, Christ Church à Oxford où j'ai eu le privilège
+d'étudier pour mon MBA, est le lieu où m'est apparue la révélation
+\enquote{terrier du lapin}. Comme Gigi, j'ai transcendé les sphères économiques,
+techniques et sociales afin de laisser Bitcoin m'envelopper spirituellement.
+Après avoir \enquote{acheté haut} pendant la bulle de novembre 2013, j'ai dû
+tirer des enseignements très difficiles de l'interminable et destructeur marché
+baisser de trois ans qui s'en suivit. Ces 21 leçons m'auraient particulièrement
+bien aidé à ce moment-là. La plupart sont simplement des vérités naturelles qui,
+pour le néophyte, sont assombries par un film opaque et fragile. Cependant,
+d'ici la fin de ce livre, cette façade volera en éclats.
 
-On a crystal-clear night in Oxford in late-August 2016, just a few weeks after
-the knife twisted in my heart again when the Bitfinex Exchange was hacked, I sat
-in quiet contemplation at Christ Church’s Master’s Garden. Times were tough, and
-I was at my mental and emotional breaking-point after what seemed to be a
-lifetime of torture; not because of financial loss, but of the crushing
-spiritual loss I felt being isolated in my world view. If only there were
-resources like this one at the time to see that I was not alone. The Master’s
-Garden is a very special place to me and many who came before me over the
-centuries. It was there where one Charles Dodgson, a Math Tutor at Christ
-Church, observed one of his young pupils, Alice Liddell, the daughter of the
-Dean of Christ Church. Dodgson, better known by his pen-name, Lewis Carroll,
-used Alice and The Garden as his inspiration, and in the magic of that hallowed
-turf, I stared deeply into the crypto-chasm, and it stared blazingly back,
-annihilating my arrogance, and slapping my self-pride square in the face. I was
-finally at peace.
+Par une nuit très claire de la fin août 2016 à Oxford, quelques semaines
+seulement après le piratage de la plateforme d'échange Bitfinex, j'ai fait une
+halte contemplative au Master's Garden de Christ Church. C'était une période
+compliquée et j'étais sur le point de craquer psychologiquement et
+émotionnellement après ce qui m'a paru une éternité de torture. Pas pour les
+pertes financières, non, mais bien à cause du vide spirituel écrasant que je
+ressentais, isolé dans ma vision du monde. Si seulement un livre comme celui-ci
+avait existé à l'époque, j'aurais pu me rendre compte que je n'étais pas seul.
+Le Master’s Garden est un endroit particulier à mes yeux et aux yeux de beaucoup
+avant moi au cours des siècles. C'est ici qu'un certain Charles Dodgson,
+professeur de mathématiques à Christ Church, remarqua l'une de ses jeunes
+élèves, Alice Liddell, fille du doyen. Dodgson, plus connu sous son nom de plume
+Lewis Carroll, s'est inspiré d'Alice et du Master's Garden ; et par la magie de
+ce vénérable gazon, j'ai plongé mon regard dans le crypto-abîme, qui me l'a
+ardemment rendu, étouffant toute arrogance, giflant mon orgueil en plein visage.
+J'étais enfin en paix.
 
-21 Lessons takes you on a true Bitcoin journey; not just a journey of
-philosophy, technology and economics, but of the soul.
+21 Leçons vous embarque pour un véritable voyage vers Bitcoin, non seulement
+philosophique, technologique et économique, mais aussi spirituel.
 
-As you dive deeper into the philosophy tersely laid out in 7 of the 21 Lessons,
-one can go as far as to understand the origin of all beings with enough time and
-contemplation. His 7 lessons on economics captures, in simple terms, how we are
-at the financial mercy of a small group of Mad Hatters, and how they have
-successfully managed to put blinders on our minds, hearts and souls. The 7
-lessons on technology lay out the beauty and technologically-Darwinian
-perfection of Bitcoin. Being a non-technical Bitcoiner, the lessons provide a
-salient review of the underlying technological nature of Bitcoin, and indeed,
-the nature of technology itself.
+En se plongeant plus profondément dans la philosophie sobrement exposée dans 7
+des 21 Leçons, avec assez de temps et de réflexion, il est possible d'aller
+jusqu'à comprendre l'origine de toute chose. Ses 7 leçons sur l'économie rendent
+compte, en des termes simples, de la façon dont nous sommes à la merci d'un
+petit groupe de chapeliers fous et comment ils ont réussi à nous mettre des
+œillères dans la tête, dans le cœur et à l'âme. Les 7 leçons sur la technologie
+décrivent la beauté et la perfection technologiquement darwinienne de Bitcoin.
+En tant que bitcoiner non technique, ces leçons apportent une étude pertinente
+sur la nature fondamentalement technologique de Bitcoin et, de fait, sur la
+nature de la technologie elle-même.
 
-In this transient experience we call life, we live, love and learn. But what is
-life but a timestamped order of events?
+Dans cette expérience éphémère que nous appelons la vie, nous vivons, nous
+aimons et nous apprenons. Mais qu'est-ce que la vie sinon une suite
+chronologique d'événements ?
 
-Conquering the Bitcoin mountain is not easy. False summits are rife, rocks are
-rough, and cracks and crevices are ubiquitously lying in wait to swallow you up.
-After reading this book, you will see that Gigi is the ultimate Bitcoin Sherpa,
-and I will appreciate him forever.
+Parvenir au sommet de la montagne Bitcoin n'est pas chose aisée. C'est truffé de
+faux sommets, le terrain est très accidenté et les crevasses sont omniprésentes,
+prêtes à vous engloutir. Après la lecture de ce livre, vous comprendrez que Gigi
+est le sherpa Bitcoin ultime. Je lui en serai toujours reconnaissant.
 
 \begin{flushright}
   Hass McCook \\
-  November 29, 2019
+  29 novembre 2019
 \end{flushright}
