--- a/frontmatter/toc-quote.tex
+++ b/frontmatter/toc-quote.tex
@@ -4,10 +4,11 @@
 \begin{quotation}
 \begin{center}
   \large
-  \enquote{Would you tell me, please, which way I ought to go from here?} \\~\\
-  \enquote{That depends a good deal on where you want to get to.} \\~\\
-  \enquote{I don't much care where --} \\~\\
-  \enquote{Then it doesn't matter which way you go.}
+  \enquote{Voudriez-vous me dire, s’il vous plaît, quel chemin je dois prendre
+  pour m’en aller d’ici ?} \\~\\
+  \enquote{Cela dépend beaucoup de l’endroit où tu veux aller.} \\~\\
+  \enquote{Peu m’importe l’endroit…} \\~\\
+  \enquote{En ce cas, peu importe la route que tu prendras.}
 \end{center}
-\begin{flushright} -- Lewis Carroll, \textit{Alice in Wonderland}\end{flushright}
+\begin{flushright} -- Lewis Carroll, \textit{Alice au pays des merveilles}\end{flushright}
 \end{quotation}
