--- a/lessons/ch1-01-immutability-and-change.tex
+++ b/lessons/ch1-01-immutability-and-change.tex
@@ -1,82 +1,84 @@
-\chapter{Immutability and Change}
+\chapter{Immutabilité et changement}
 \label{les:1}
 
 \begin{chapquote}{Alice}
-\enquote{I wonder if I've been changed in the night. Let me think. Was I the same when I
-got up this morning? I almost think I can remember feeling a little different.
-But if I'm not the same, the next question is `Who in the world am I?' Ah,
-that's the great puzzle!}
+\enquote{Je me demande si on m’a changée pendant la nuit ? Voyons,
+réfléchissons : est-ce que j’étais bien la même quand je me suis levée ce
+matin ? Je crois me rappeler que je me suis sentie un peu différente. Mais, si
+je ne suis pas la même, la question qui se pose est la suivante : Qui diable
+puis-je bien être ? Ah, c’est là le grand problème !}
 \end{chapquote}
 
-Bitcoin is inherently hard to describe. It is a \textit{new thing}, and any
-attempt to draw a comparison to previous concepts -- be it by calling
-it digital gold or the internet of money -- is bound to fall short of
-the whole. Whatever your favorite analogy might be, two aspects of
-Bitcoin are absolutely essential: decentralization and immutability.
+Bitcoin est fondamentalement difficile à décrire. C'est un \textit{truc
+nouveau}, donc chaque tentative de comparaison à des concepts antérieurs -- y
+compris l'appeler or numérique ou Internet de l'argent -- est condamnée à ne pas
+pouvoir rendre compte de son entièreté. Quelle que soit votre analogie favorite,
+il y a deux aspects de Bitcoin réellement essentiels : la décentralisation et
+l'immutabilité.
 
 \paragraph{}
-One way to think about Bitcoin is as an automated social contract\footnote{Hasu,
-Unpacking Bitcoin's Social Contract~\cite{social-contract}}. The software is
-just one piece of the puzzle, and hoping to change Bitcoin by changing the
-software is an exercise in futility. One would have to convince the rest of the
-network to adopt the changes, which is more a psychological effort than a
-software engineering one.
+On peut voir Bitcoin comme un contrat social automatisé\footnote{Hasu, Unpacking
+Bitcoin's Social Contract~\cite{social-contract}}. Le logiciel est juste une des
+pièces du puzzle, de sorte que vouloir changer Bitcoin en changeant le logiciel
+est absolument futile. Il faudrait pour cela convaincre l'ensemble du réseau
+d'adopter les changements, ce qui tient plus de l'effort psychologique que de
+l'effort d'ingénierie.
 
 \paragraph{}
-The following might sound absurd at first, like so many other things in
-this space, but I believe that it is profoundly true nonetheless: You
-won't change Bitcoin, but Bitcoin will change you.
+Ce qui suit peut sembler absurde au départ, comme tant d'autres choses dans ce
+domaine, mais je crois fermement en la vérité de cette maxime : ce n'est pas
+vous qui changerez Bitcoin, c'est Bitcoin qui vous changera.
 
 \begin{quotation}\begin{samepage}
-\enquote{Bitcoin will change us more than we will change it.}
+\enquote{Bitcoin nous changera plus que nous ne le changerons.}
 \begin{flushright} -- Marty Bent\footnote{Tales From the Crypt~\cite{tftc21}}
 \end{flushright}\end{samepage}\end{quotation}
 
-It took me a long time to realize the profundity of this. Since Bitcoin
-is just software and all of it is open-source, you can simply change
-things at will, right? Wrong. \textit{Very} wrong. Unsurprisingly, Bitcoin's
-creator knew this all too well.
+Ça m'a pris un bon moment pour comprendre la profondeur de cette phrase. Après
+tout, comme Bitcoin est juste un logiciel et qu'il est entièrement libre, on
+peut simplement changer les choses à volonté, non ? Faux. \textit{Totalement}
+faux. Sans surprise, l'inventeur de Bitcoin le savait parfaitement.
 
 \begin{quotation}\begin{samepage}
-\enquote{The nature of Bitcoin is such that once version 0.1 was released, the core
-design was set in stone for the rest of its lifetime.}
-\begin{flushright} -- Satoshi Nakamoto\footnote{BitcoinTalk forum post: `Re:
-Transactions and Scripts\ldots'~\cite{satoshi-set-in-stone}}
+\enquote{La nature de Bitcoin est telle qu'une fois sortie la version 0.1, les
+concepts essentiels étaient gravés dans le marbre pour le restant de ses jours.}
+\begin{flushright} -- Satoshi Nakamoto\footnote{Message du forum BitcoinTalk :
+`Re: Transactions and Scripts\ldots'~\cite{satoshi-set-in-stone}}
 \end{flushright}\end{samepage}\end{quotation}
 
-Many people have attempted to change Bitcoin's nature. So far all of
-them have failed. While there is an endless sea of forks and altcoins,
-the Bitcoin network still does its thing, just as it did when the first
-node went online. The altcoins won't matter in the long run. The forks
-will eventually starve to death. Bitcoin is what matters. As long as our
-fundamental understanding of mathematics and/or physics doesn't change,
-the Bitcoin honeybadger will continue to not care.
+De nombreuses personnes ont tenté de modifier la nature de Bitcoin. Elles ont
+toutes échoué jusqu'à présent. Bien qu'il existe une étendue infinie de forks et
+d'altcoins, le réseau Bitcoin continue sa route, exactement comme à la mise en
+ligne du prenier nœud. Les altcoins n'importent pas sur le long terme. Les forks
+finiront par mourir de faim. Ce qui importe c'est Bitcoin. Tant que notre
+compréhension fondamentale des mathématiques et/ou de la physique ne change pas,
+le ratel Bitcoin continuera de s'en moquer.
 
 \begin{quotation}\begin{samepage}
-\enquote{Bitcoin is the first example of a new form of life. It lives and
-breathes on the internet. It lives because it can pay people to keep
-it alive. [\ldots] It can't be changed. It can't be argued with. It
-can't be tampered with. It can't be corrupted. It can't be stopped.
-[\ldots] If nuclear war destroyed half of our planet, it would continue
-to live, uncorrupted.}
+\enquote{Bitcoin est le premier exemple d'une nouvelle forme de vie. Il vit et
+respire sur internet. Il vit car il est capable de payer des gens pour le
+maintenir en vie. [\ldots] Il ne peut être changé. On ne peut le contredire. On
+ne peut l'altérer. On ne peut le corrompre. On ne peut l'arrêter. [\ldots] Si
+une guerre nucléaire détruisait la moitié de la planète, il continuerait à
+vivre, intact.}
 \begin{flushright} -- Ralph Merkle\footnote{DAOs, Democracy and
 Governance,~\cite{merkle-dao}}
 \end{flushright}\end{samepage}\end{quotation}
 
-The heartbeat of the Bitcoin network will outlast all of ours.
+Le cœur de Bitcoin battra plus longtemps que tous les nôtres.
 
 ~
 
-Realizing the above changed me way more than the past blocks of the Bitcoin
-blockchain ever will. It changed my time preference, my understanding of
-economics, my political views, and so much more. Hell, it is even changing
-people's diets\footnote{Inside the World of the Bitcoin
-Carnivores,~\cite{carnivores}}. If all of this sounds crazy to you, you're in
-good company. All of this is crazy, and yet it is happening.
+Comprendre tout ça m'a fait changer bien plus que ne le feront les précédents
+blocs de Bitcoin. Ma préférence temporelle a été modifiée, ma compréhension de
+l'économie, mes opinions politiques et bien plus encore. Mince, ça change même
+le régime alimentaire des gens\footnote{Inside the World of the Bitcoin
+Carnivores,~\cite{carnivores}}. Si tout ça vous semble dingue, vous êtes au bon
+endroit. Tout ceci est dingue en effet ; et c'est pourtant ce qui se passe.
 
 ~
 
-\paragraph{Bitcoin taught me that it won't change. I will.}
+\paragraph{Bitcoin m'a appris qu'il ne changerait pas. C'est moi qui changerai.}
 
 % ---
 %
