--- a/lessons/ch1-02-the-scarcity-of-scarcity.tex
+++ b/lessons/ch1-02-the-scarcity-of-scarcity.tex
@@ -1,38 +1,43 @@
 
-\chapter{The Scarcity of Scarcity}
+\chapter{La rareté de la rareté}
 \label{les:2}
 
 \begin{chapquote}{Alice}
-\enquote{That's quite enough - I hope I sha'n't grow any more\ldots}
+\enquote{Cela suffit comme cela\ldots J’espère que je ne grandirai plus\ldots}
 \end{chapquote}
 
-In general, the advance of technology seems to make things more abundant. More
-and more people are able to enjoy what previously have been luxurious goods.
-Soon, we will all live like kings. Most of us already do. As Peter Diamandis
-wrote in Abundance~\cite{abundance}: \enquote{Technology is a resource-liberating
-mechanism. It can make the once scarce the now abundant.}
+Généralement, le progrès technologique semble rendre les choses plus abondantes.
+Ce qui était auparavant un produit de luxe devient accessible à de plus en plus
+de gens. Bientôt, nous vivrons tous comme des rois. C'est déjà le cas pour la
+plupart d'entre nous. Comme l'écrivait Peter Diamandis dans
+Abundance~\cite{abundance} : \enquote{La technologie est un mécanisme de
+libération des ressources. Elle peut rendre abondant ce qui était rare.}
 
-Bitcoin, an advanced technology in itself, breaks this trend and creates
-a new commodity which is truly scarce. Some even argue that it is one of
-the scarcest things in the universe. The supply can't be inflated, no
-matter how much effort one chooses to expend towards creating more.
+Bitcoin, en tant que technologie avancée, casse cette tendance et crée une
+nouvelle ressource authentiquement rare. Certains avancent même que c'est l'une
+des ressources les plus rares de l'univers. L'offre ne peut pas grossir, quels
+que soient les efforts déployés pour y parvenir.
 
 \begin{quotation}\begin{samepage}
-\enquote{Only two things are genuinely scarce: time and bitcoin.}
-\begin{flushright} -- Saifedean Ammous\footnote{Presentation on The Bitcoin Standard~\cite{bitcoinstandard-pres}}
+\enquote{Il n'y a que deux choses véritablement rares : le temps et Bitcoin.}
+\begin{flushright} -- Saifedean Ammous\footnote{Présentation sur The Bitcoin
+Standard~\cite{bitcoinstandard-pres}}
 \end{flushright}\end{samepage}\end{quotation}
 
-Paradoxically, it does so by a mechanism of copying. Transactions are
-broadcast, blocks are propagated, the distributed ledger is --- well,
-you guessed it --- distributed. All of these are just fancy words for
-copying. Heck, Bitcoin even copies itself onto as many computers as it
-can, by incentivizing individual people to run full nodes and mine new
-blocks.
+Paradoxalement, ceci se produit par un mécanisme de réplication. Les
+transactions sont diffusées, les blocs se propagent, le registre distribué est
+-- vous l'avez deviné -- distribué. Mais ce ne sont que des mots savants pour
+désigner la copie. Bon sang, Bitcoin se réplique même tout seul sur autant
+d'ordinateurs que possible, en incitant les gens à exécuter des nœuds complets
+et à miner de nouveaux blocs.
 
-All of this duplication wonderfully works together in a concerted effort
-to produce scarcity.
+Toute cette réplication œuvre magnifiquement de concert en vue de produire de la
+rareté.
 
-\paragraph{In a time of abundance, Bitcoin taught me what real scarcity is.}
+\paragraph{}
+
+\paragraph{En ces temps d'abondance, Bitcoin m'a appris ce qu'était la véritable
+rareté.}
 
 % ---
 %
