--- a/lessons/ch1-04-the-problem-of-identity.tex
+++ b/lessons/ch1-04-the-problem-of-identity.tex
@@ -1,51 +1,54 @@
-\chapter{The Problem of Identity}
+\chapter{Le problème de l'identité}
 \label{les:4}
 
-\begin{chapquote}{Lewis Carroll, \textit{Alice in Wonderland}}
-  \enquote{Who are you?} said the caterpillar.
+\begin{chapquote}{Lewis Carroll, \textit{Alice au pays des merveilles}}
+  \enquote{Qui es-tu ?} lui demanda-t-elle.
 \end{chapquote}
 
-Nic Carter, in an homage to Thomas Nagel's treatment of the same
-question in regards to a bat, wrote an excellent piece which discusses
-the following question: What is it like to be a bitcoin? He
-brilliantly shows that open, public blockchains in general, and Bitcoin
-in particular, suffer from the same conundrum as the ship of Theseus\footnote{In
-the metaphysics of identity, the ship of Theseus is a thought experiment that
-raises the question of whether an object that has had all of its components
-replaced remains fundamentally the same object.~\cite{wiki:theseus}}: which
-Bitcoin is the real Bitcoin?
+Nic Carter, en hommage à Thomas Nagel qui posait cette même question à propos
+des chauve-souris, a écrit un excellent article sur la question : quel effet
+cela fait-il d'être un bitcoin ? Il y montre remarquablement qu'en général, les
+blockchains publiques et ouvertes, et Bitcoin plus particulièrement, souffrent
+du même dilemme que le bateau de Thésée\footnote{Dans la métaphysique de
+l'identité, le bateau de Thésée est une expérience de pensée qui soulève la
+question de savoir si un objet dont toutes les parties ont été remplacées reste
+fondamentalement le même objet.~\cite{wiki:theseus}} : quel Bitcoin est le vrai
+Bitcoin ?
 
 \begin{quotation}\begin{samepage}
-\enquote{Consider just how little persistence Bitcoin's components have. The
-entire codebase has been reworked, altered, and expanded such that it
-barely resembles its original version. [...] The registry of who
-owns what, the ledger itself, is virtually the only persistent trait
-of the network [...]
-To be considered truly leaderless, you must surrender the easy
-solution of having an entity that can designate one chain as the
-legitimate one.}
-\begin{flushright} -- Nic Carter\footnote{Nic Carter, \textit{What is it like to be a bitcoin?} \cite{bitcoin-identity}}
+\enquote{Observez par exemple comment les éléments de Bitcoin font preuve de peu
+de persistance. L'ensemble du code source a déjà été retravaillé, modifié et
+étendu tant et si bien qu'il ne ressemble que difficilement à sa version
+d'origine. [...] Les archives de qui possède quoi, le registre lui-même, est
+virtuellement la seule caractéristique persistante du réseau [...]
+Afin d'être vraiment perçu sans responsable, il faut tourner le dos à cette
+solution simple qui consiste à ce qu'une entité puisse désigner une chaîne comme
+étant la chaîne légitime.}
+\begin{flushright} -- Nic Carter\footnote{Nic Carter, \textit{Quel effet cela
+fait-il d'être un bitcoin ?} \cite{bitcoin-identity}}
 \end{flushright}\end{samepage}\end{quotation}
 
-It seems like the advancement of technology keeps forcing us to take
-these philosophical questions seriously. Sooner or later, self-driving
-cars will be faced with real-world versions of the trolley problem,
-forcing them to make ethical decisions about whose lives do matter and
-whose do not.
+Il semble que le progrès technologique nous force sans arrêt à prendre au
+sérieux ces considérations philosophiques. Un jour ou l'autre, les voitures
+autonomes feront face au dilemme du tramway de façon bien réelle, ce qui les
+obligera à prendre des décisions d'ordre éthique sur quelles vies comptent et
+quelles vies ne comptent pas.
 
-Cryptocurrencies, especially since the first contentious hard-fork,
-force us to think about and agree upon the metaphysics of identity.
-Interestingly, the two biggest examples we have so far have lead to two
-different answers. On August 1, 2017, Bitcoin split into two camps. The
-market decided that the unaltered chain is the original Bitcoin. One
-year earlier, on October 25, 2016, Ethereum split into two camps. The
-market decided that the \textit{altered} chain is the original Ethereum.
+Les cryptomonnaies, particulièrement depuis le premier hard-fork litigieux, nous
+forcent à réfléchir et à se mettre d'accord sur la métaphysique de l'identité.
+Il est intéressant de constater que les deux meilleurs exemples que nous avons
+connu jusqu'à présent ont mené à deux réponses différentes. Le premier août
+2017, Bitcoin se sépara en deux camps. Le marché décida que la chaîne inchangée
+était le Bitcoin originel. Un an plus tôt, le 25 octobre 2016, Ethereum se
+séparait en deux camps. Le marché décidait que la chaîne \textit{modifiée} était
+l'Ethereum originel.
 
-If properly decentralized, the questions posed by the \textit{Ship of Theseus}
-will have to be answered in perpetuity for as long as these networks of
-value-transfer exist.
+Aussi longtemps que ces réseaux de transfert de valeur existeront, pour peu
+qu'ils soient correctement décentralisés, les questions posées par le
+\textit{bateau de Thésée} devront sans cesse trouver des réponses.
 
-\paragraph{Bitcoin taught me that decentralization contradicts identity.}
+\paragraph{Bitcoin m'a appris que la décentralisation entrait en contradiction
+avec l'identité.}
 
 % ---
 %
