--- a/lessons/ch1-06-the-power-of-free-speech.tex
+++ b/lessons/ch1-06-the-power-of-free-speech.tex
@@ -1,57 +1,63 @@
-\chapter{The Power of Free Speech}
+\chapter{La force de la liberté d'expression}
 \label{les:6}
 
-\begin{chapquote}{Lewis Carroll, \textit{Alice in Wonderland}}
-\enquote{I beg your pardon?} said the mouse, frowning, but very politely, \enquote{did you speak?}
+\begin{chapquote}{Lewis Carroll, \textit{Alice au pays des merveilles}}
+\enquote{Je te demande pardon !} dit la Souris très poliment, mais en fronçant
+le sourcil. \enquote{Tu as dit quelque chose ? }
 \end{chapquote}
 
-Bitcoin is an idea. An idea which, in its current form, is the
-manifestation of a machinery purely powered by text. Every aspect of
-Bitcoin is text: The whitepaper is text. The software which is run by
-its nodes is text. The ledger is text. Transactions are text. Public and
-private keys are text. Every aspect of Bitcoin is text, and thus
-equivalent to speech.
+Bitcoin est une idée. Une idée qui, dans sa forme actuelle, est la manifestation
+de rouages purement alimentés par du texte. Tous les aspects de Bitcoin sont du
+texte : le livre blanc, c'est du texte. Le logiciel qui s'exécute sur les nœuds,
+c'est du texte. Le registre, c'est du texte. Les transactions, ce sont du texte.
+Les clés publiques et privées, ce sont du texte. Tous les aspects de Bitcoin
+sont du texte, en conséquence ils sont équivalents à de la parole.
 
 \begin{quotation}\begin{samepage}
-\enquote{Congress shall make no law respecting an establishment of religion,
-or prohibiting the free exercise thereof; or abridging the freedom of
-speech, or of the press; or the right of the people peaceably to
-assemble, and to petition the Government for a redress of grievances.}
-\begin{flushright} -- First Amendment to the U.S. Constitution
+\enquote{Le Congrès n'adoptera aucune loi relative à l'établissement d'une
+religion, ou à l'interdiction de son libre exercice ; ou pour limiter la liberté
+d'expression, de la presse ou le droit des citoyens de se réunir pacifiquement
+ou d'adresser au Gouvernement des pétitions pour obtenir réparations des torts
+subis.}
+\begin{flushright} -- Premier amendement de la Constitution des États-Unis
 \end{flushright}\end{samepage}\end{quotation}
 
-Although the final battle of the Crypto Wars\footnote{The \textit{Crypto Wars}
-is an unofficial name for the U.S. and allied governments' attempts to undermine
-encryption.~\cite{eff-cryptowars}~\cite{wiki:cryptowars}} has not been fought
-yet, it will be very difficult to criminalize an idea, let alone an idea which
-is based on the exchange of text messages. Every time a government tries to
-outlaw text or speech, we slip down a path of absurdity which inevitably leads
-to abominations like illegal numbers\footnote{An illegal number is a number that
-represents information which is illegal to possess, utter, propagate, or
-otherwise transmit in some legal jurisdiction.\cite{wiki:illegal-number}} and
-illegal primes\footnote{An illegal prime is a prime number that represents
-information whose possession or distribution is forbidden in some legal
-jurisdictions. One of the first illegal primes was found in 2001. When
-interpreted in a particular way, it describes a computer program that bypasses
-the digital rights management scheme used on DVDs. Distribution of such a
-program in the United States is illegal under the Digital Millennium Copyright
-Act. An illegal prime is a kind of illegal number.\cite{wiki:illegal-prime}}.
+Bien que la bataille finale des Crypto Wars\footnote{Les \textit{Crypto Wars}
+est le nom officieux des tentatives par les États-Unis et les gouvernements
+alliés de saboter le chiffrement des
+données.~\cite{eff-cryptowars}~\cite{wiki:cryptowars}} n'ait pas encore été
+livrée, il sera extrêmement difficile de criminaliser une idée, qui plus est une
+idée basée sur l'échange de messages écrits. Chaque fois qu'un gouvernement
+tente d'interdire du texte ou de la parole, nous glissons sur le chemin de
+l'absurdité qui mène inévitablement aux abominations telles que les nombres
+illégaux\footnote{Un nombre illégal est un nombre qui représente une information
+qu'il est interdit de posséder, prononcer, diffuser ou transmettre dans une
+juridiction légale donnée.\cite{wiki:illegal-number}} et les nombres premiers
+illégaux\footnote{Un nombre premier illégal est un nombre premier qui représente
+une information dont la possession ou la distribution est interdite dans une
+quelconque juridiction légale. L'un des premiers nombres premiers illégaux fut
+découvert en 2001. Lorsqu'interprété d'une façon particulière, il décrit un
+programme informatique qui permet de contourner le système de gestion des
+droits numériques sur les DVD. La distribution d'un tel programme aux États-Unis
+est illégale selon le Digital Millennium Copyright Act. Un nombre premier
+illégal est une sorte de nombre illégal.\cite{wiki:illegal-prime}}.
 
-As long as there is a part of the world where speech is free as in
-\textit{freedom}, Bitcoin is unstoppable.
+Tant que quelque part dans le monde, l'expression restera libre comme dans
+\textit{liberté}, Bitcoin sera inarrêtable.
 
 \begin{quotation}\begin{samepage}
-\enquote{There is no point in any Bitcoin transaction that Bitcoin ceases to be
-\textit{text}. It is \textit{all text}, all the time. [...] Bitcoin is
-\textit{text}. Bitcoin is \textit{speech}. It cannot be regulated in a free
-country like the USA with guaranteed inalienable rights and a First Amendment
-that explicitly excludes the act of publishing from government oversight.}
-\begin{flushright} -- Beautyon\footnote{Beautyon, \textit{Why America can't regulate
-Bitcoin} \cite{america-regulate-bitcoin}}
+\enquote{Il n'y a aucun moment lors d'une transaction où Bitcoin ne cesse d'être
+du \textit{texte}. Ce n'est \textit{que du texte}, tout le temps. [...] Bitcoin,
+c'est du \textit{texte}. Bitcoin, c'est de la \textit{parole}. Il ne peut pas
+être réglementé dans un pays libre tel que les États-Unis qui possède des droits
+inaliénables garantis et un premier amendement qui retire explicitement le droit
+de publier du contrôle du gouvernement.}
+\begin{flushright} -- Beautyon\footnote{Beautyon, \textit{Pourquoi l'Amérique ne
+peut réglementer Bitcoin} \cite{america-regulate-bitcoin}}
 \end{flushright}\end{samepage}\end{quotation}
 
-\paragraph{Bitcoin taught me that in a free society, free speech and free software
-are unstoppable.}
+\paragraph{Bitcoin m'a appris que dans une société libre, la liberté
+d'expression et le logiciel libre étaient inarrêtables.}
 
 % ---
 %
