--- a/lessons/ch2-10-value.tex
+++ b/lessons/ch2-10-value.tex
@@ -1,51 +1,54 @@
-\chapter{Value}
+\chapter{La valeur}
 \label{les:10}
 
-\begin{chapquote}{Lewis Carroll, \textit{Alice in Wonderland}}
-\enquote{It was the white rabbit, trotting slowly back again, and looking anxiously
-about it as it went, as if it had lost something\ldots}
+\begin{chapquote}{Lewis Carroll, \textit{Alice au pays des merveilles}}
+\enquote{C’était le Lapin Blanc qui revenait en trottant lentement et en jetant
+autour de lui des regards inquiets comme s’il avait perdu quelque chose\ldots}
 \end{chapquote}
 
-Value is somewhat paradoxical, and there are multiple theories\footnote{See
-\textit{Theory of value (economics)} on Wikipedia \cite{wiki:theory-of-value}}
-which try to explain why we value certain things over other things. People have
-been aware of this paradox for thousands of years. As Plato wrote in his
-dialogue with Euthydemus, we value some things because they are rare, and not
-merely based on their necessity for our survival.
+La valeur est en quelque sorte paradoxale et il existe de multiples
+théories\footnote{Voir \textit{Théorie de la valeur (économie)} sur Wikipédia
+\cite{wiki:theory-of-value}} qui tentent d'expliquer pourquoi nous donnons de la
+valeur à certaines choses plutôt qu'à d'autres. Les gens sont conscients de ce
+paradoxe depuis des millénaires. Comme Platon l'écrivait dans son dialogue avec
+Euthydème, nous estimons certaines choses parce qu'elles sont rares, pas
+seulement sur leur nécessité à notre survie.
 
 \begin{quotation}\begin{samepage}
-\enquote{And if you are prudent you will give this same counsel to your pupils
-also --- that they are never to converse with anybody except you and
-each other. For it is the rare, Euthydemus, that is precious, while
-water is cheapest, though best, as Pindar said.}
-\begin{flushright} -- Plato\footnote{Plato, \textit{Euthydemus} \cite{euthydemus}}
+\enquote{Même, pour bien faire, vous avertiriez vos écoliers d'en user de la
+sorte, et de n'en parler qu'entre eux ou avec vous ; car la rareté, Euthydème,
+met le prix aux choses, et l'eau, comme dit Pindare, se vend à vil prix
+quoiqu'elle soit ce qu'il y a de plus précieux.}
+\begin{flushright} -- Platon\footnote{Platon, \textit{Euthydème}
+\cite{euthydemus}}
 \end{flushright}\end{samepage}\end{quotation}
 
-This paradox of value\footnote{See \textit{Paradox of value} on Wikipedia
-\cite{wiki:paradox-of-value}} shows something interesting about us humans: we
-seem to value things on a subjective\footnote{See \textit{Subjective theory of
-value} on Wikipedia \cite{wiki:subjective-theory-of-value}} basis, but do so
-with certain non-arbitrary criteria. Something might be \textit{precious} to us
-for a variety of reasons, but things we value do share certain characteristics.
-If we can copy something very easily, or if it is naturally abundant, we do not
-value it.
+Ce paradoxe de la valeur\footnote{Voir \textit{Paradoxe de l'eau et du diamant}
+sur Wikipedia\cite{wiki:paradox-of-value}} montre une chose intéressante à
+propos de nous autres, humains : il semblerait que nous estimions les choses sur
+une base subjective\footnote{Voir \textit{Conception subjective de la valeur}
+sur Wikipedia \cite{wiki:subjective-theory-of-value}}, tout en observant
+certains critères raisonnés. Une chose peut nous être \textit{précieuse} pour de
+nombreuses raisons, mais celles auxquelles nous accordons de la valeur partagent
+certains traits. Si cette chose se copie facilement ou qu'elle est naturellement
+abondante, nous ne l'estimons pas.
 
-It seems that we value something because it is scarce (gold, diamonds,
-time), difficult or labor-intensive to produce, can't be replaced (an
-old photograph of a loved one), is useful in a way in which it enables
-us to do things which we otherwise couldn't, or a combination of those,
-such as great works of art.
+Apparemment, nous accordons de la valeur à quelque chose par sa rareté (l'or,
+les diamants, le temps), sa complexité ou sa quantité de travail nécessaire, son
+irremplaçabilité (une vieille photo d'un être cher), son utilité à permettre des
+choses autrement impossibles ou encore une combinaison de tout ça, comme les
+grandes œuvres d'art.
 
-Bitcoin is all of the above: it is extremely rare (21 million),
-increasingly hard to produce (reward halvening), can't be replaced (a
-lost private key is lost forever), and enables us to do some quite
-useful things. It is arguably the best tool for value transfer across
-borders, virtually resistant to censorship and confiscation in the
-process, plus, it is a self-sovereign store of value, allowing
-individuals to store their wealth independent of banks and governments,
-just to name two.
+Bitcoin est tout ça à la fois : il est extrêmement rare (21 millions), de plus
+en plus dur à produire (la réduction des récompenses), impossible à remplacer
+(une clé privée perdue l'est à jamais) et nous permet de faire des choses plutôt
+utiles. C'est vraisemblablement le meilleur outil pour transférer de la valeur
+au-delà des frontières, il est virtuellement résistant à la censure et à la
+saisie, ce qui permet à n'importe qui de stocker sa valeur sans l'aval des
+banques et du gouvernement, pour ne citer qu'eux.
 
-\paragraph{Bitcoin taught me that value is subjective but not arbitrary.}
+\paragraph{Bitcoin m'a appris que la valeur était subjective, mais pas
+arbitraire.}
 
 % ---
 %
