--- a/lessons/ch2-11-money.tex
+++ b/lessons/ch2-11-money.tex
@@ -1,94 +1,98 @@
-\chapter{Money}
+\chapter{L'argent}
 \label{les:11}
 
-\begin{chapquote}{The Sage}
-\enquote{In my youth, \ldots \\
-I kept all my limbs very supple, \\
-By the use of this ointment, \\
-five shillings the box -- \\
-Allow me to sell you a couple.}
+\begin{chapquote}{Le Sage}
+\enquote{Quand j'étais jeune, \ldots \\
+j'ai bien entretenu la souplesse de mes muscles \\
+en me frottant avec cette crème \\
+-- un shilling la boite ! – \\
+Voulez-vous m'en acheter un lot ?}
 \end{chapquote}
 
-What is money? We use it every day, yet this question is surprisingly
-difficult to answer. We are dependent on it in ways big and small, and
-if we have too little of it our lives become very difficult. Yet, we
-seldom think about the thing which supposedly makes the world go round.
-Bitcoin forced me to answer this question over and over again: What the
-hell is money?
+Qu'est-ce que l'argent ? On l'utilise tous les jours, pourtant il est
+étonnamment complexe de répondre à cette question. Nous en dépendons de toutes
+les manières possibles et imaginables et si nous en manquons nos vies deviennent
+très difficiles. Toutefois, nous réfléchissons rarement à cette chose qui fait
+prétendument tourner le monde. Bitcoin m'a contraint à répondre inlassablement à
+cette question : mais enfin c'est quoi, l'argent ?
 
-In our \enquote{modern} world, most people will probably think of pieces of
-paper when they talk about money, even though most of our money is just
-a number in a bank account. We are already using zeros and ones as our
-money, so how is Bitcoin different? Bitcoin is different because at its
-core it is a very different \textit{type} of money than the money we currently
-use. To understand this, we will have to take a closer look at what
-money is, how it came to be, and why gold and silver was used for most
-of commercial history.
+Dans notre monde \enquote{moderne}, la plupart des gens penseront probablement à
+des bouts de papier lorsqu'ils parleront d'argent, alors même qu'il n'est en
+majorité qu'un nombre sur un compte bancaire. Notre argent est déjà fait de un
+et de zéros, alors en quoi Bitcoin est-il différent ? Il l'est car en son sein,
+c'est un \textit{type} de monnaie très différent de celle que l'on utilise
+habituellement. Pour le comprendre, nous allons devoir nous pencher sur ce
+qu'est la monnaie, comment elle a vu le jour et pourquoi l'or et l'argent ont
+été utilisés durant la majeure partie de l'histoire du commerce.
 
 \paragraph{}
-Seashells, gold, silver, paper, bitcoin. In the end, \textbf{money is whatever
-people use as money}, no matter its shape and form, or lack thereof.
+Les coquillages, l'or, l'argent, le papier, le bitcoin. En fin de compte,
+\textbf{la monnaie c'est ce dont les gens se servent}, peu importe son aspect et
+sa forme, ou l'absence de celles-ci.
 
-Money, as an invention, is ingenious. A world without money is insanely
-complicated: How many fish will buy me new shoes? How many cows will buy
-me a house? What if I don't need anything right now but I need to get
-rid of my soon-to-be rotten apples? You don't need a lot of imagination
-to realize that a barter economy is maddeningly inefficient.
+L'argent est ingénieux, en tant qu'invention. Un monde sans argent s'en
+retrouverait compliqué à l'absurde : combien de poissons pour ces nouvelles
+chaussures ? Combien de vaches pour acheter une maison ? Qu'est-ce que je fais
+si je n'ai aucun besoin immédiat mais que je dois me débarrasser de mes pommes
+bien mûres ? Pas besoin d'être très imaginatif pour comprendre qu'une économie
+basée sur le troc serait terriblement inefficace.
 
-The great thing about money is that it can be exchanged for \textit{anything
-else} --- that's quite the invention! As Nick
-Szabo\footnote{\url{http://unenumerated.blogspot.com/}} brilliantly summarizes
-in \textit{Shelling Out: The Origins of Money} \cite{shelling-out}, we humans
-have used all kinds of things as money: beads made of rare materials like ivory,
-shells, or special bones, various kinds of jewelry, and later on rare metals
-like silver and gold.
-
-\begin{quotation}\begin{samepage}
-\enquote{In this sense, it's more typical of a precious metal. Instead of the
-supply changing to keep the value the same, the supply is
-predetermined and the value changes.}
-\begin{flushright} -- Satoshi Nakamoto\footnote{Satoshi Nakamoto, in a reply to Sepp
-Hasslberger \cite{satoshi-precious-metal}}
-\end{flushright}\end{samepage}\end{quotation}
-
-Being the lazy creatures we are, we don't think too much about things
-which just work. Money, for most of us, works just fine. Like with our
-cars or our computers, most of us are only forced to think about the
-inner workings of these things if they break down. People who saw their
-life-savings vanish because of hyperinflation know the value of hard
-money, just like people who saw their friends and family vanish because
-of the atrocities of Nazi Germany or Soviet Russia know the value of
-privacy.
-
-The thing about money is that it is all-encompassing. Money is half of
-every transaction, which imbues the ones who are in charge with creating
-money with enormous power.
+Le truc excellent avec l'argent c'est qu'on peut l'échanger contre
+\textit{n'importe quoi d'autre} -- c'est une sacrée invention ! Tel que Nick
+Szabo\footnote{\url{http://unenumerated.blogspot.com/}} le résume
+brillamment dans \textit{Shelling Out: The Origins of Money}
+\cite{shelling-out}, les êtres humains ont utilisé toutes sortes de choses en
+tant que monnaie : des perles de matériaux rares comme l'ivoire, des
+coquillages, des os spécifiques, divers types de bijoux, puis plus tard des
+métaux rares comme l'argent ou l'or.
 
 \begin{quotation}\begin{samepage}
-\enquote{Given that money is one half of every commercial transaction and that
-whole civilizations literally rise and fall based on the quality of
-their money, we are talking about an awesome power, one that flies
-under the cover of night. It is the power to weave illusions that
-appear real as long as they last. That is the very core of the
-Fed's power.}
-\begin{flushright} -- Ron Paul\footnote{Ron Paul, \textit{End the Fed} \cite{end-the-fed}}
+\enquote{En ce sens, il est plus représentatif d'un métal précieux. Au lieu que
+ce soit l'offre qui change afin de maintenir la valeur, celle-ci est
+prédéterminée et c'est la valeur qui change.}
+\begin{flushright} -- Satoshi Nakamoto\footnote{Satoshi Nakamoto, dans une
+réponse à Sepp Hasslberger \cite{satoshi-precious-metal}}
 \end{flushright}\end{samepage}\end{quotation}
 
-Bitcoin peacefully removes this power, since it does away with money
-creation and it does so without the use of force.
+Tels les bons paresseux que nous sommes, nous ne passons pas trop de temps à
+réfléchir à ce qui marche. L'argent, pour la plupart d'entre nous, ça fonctionne
+très bien. Comme avec nos voitures ou nos ordinateurs, nous ne sommes obligés
+d'y penser que lorsqu'un de ces trucs tombe en panne. Les personnes qui ont vu
+leurs économies d'une vie s'évaporer avec l'hyperinflation savent très bien la
+valeur d'une monnaie forte, tout comme ceux qui ont vu leurs amis et famille
+disparaître à cause des atrocités de l'Allemagne nazie ou de l'Union Soviétique
+connaissent très bien la valeur de la confidentialité.
 
-Money went through multiple iterations. Most iterations were good. They
-improved our money in one way or another. Very recently, however, the
-inner workings of our money got corrupted. Today, almost all of our
-money is simply created \textit{out of thin air} by the powers that be. To
-understand how this came to be I had to learn about the history and
-subsequent downfall of money.
+Le problème avec l'argent, c'est qu'il est partout. Il représente la moitié de
+chaque transaction, ce qui confère un pouvoir considérable à ceux qui sont
+responsables de l'émission monétaire.
 
-If it will take a series of catastrophes or simply a monumental
-educational effort to correct this corruption remains to be seen. I pray
-to the gods of sound money that it will be the latter.
+\begin{quotation}\begin{samepage}
+\enquote{Étant donné que l'argent représente la moitié de chaque transaction
+commerciale et que des civilisations entières s'épanouissent et s'effondrent
+selon la qualité de leur monnaie, on parle ici d'un pouvoir incommensurable, un
+pouvoir qui est passé sous silence. C'est le pouvoir de tisser des mirages qui
+semblent vrais aussi longtemps qu'ils durent. C'est là le cœur du pouvoir de la
+Réserve Fédérale.}
+\begin{flushright} -- Ron Paul\footnote{Ron Paul, \textit{End the Fed}
+\cite{end-the-fed}}
+\end{flushright}\end{samepage}\end{quotation}
 
-\paragraph{Bitcoin taught me what money is.}
+Bitcoin retire ce pouvoir pacifiquement, puisqu'il met fin à l'émission
+monétaire sans recourir à la force.
+
+L'argent a connu de multiples itérations. La plupart d'entre elles étaient
+bonnes. Elles amélioraient notre monnaie d'une façon ou d'une autre. En
+revanche, très récemment, ses rouages ont été corrompus. Aujourd'hui, la
+quasi-totalité de notre argent est fabriqué \textit{de toutes pièces} par les
+pouvoirs en place. Pour comprendre comment nous en sommes arrivés là, j'ai dû
+étudier l'histoire de la monnaie et de son déclin consécutif.
+
+Il reste encore à voir s'il faudra une série de catastrophes ou simplement un
+effort éducatif monumental pour réparer cette corruption. Je prie les dieux de
+la monnaie saine afin que ce soit le second.
+
+\paragraph{Bitcoin m'a appris ce qu'était l'argent.}
 
 % ---
 %
