--- a/lessons/ch3-18-move-slowly-and-dont-break-things.tex
+++ b/lessons/ch3-18-move-slowly-and-dont-break-things.tex
@@ -1,122 +1,129 @@
-\chapter{Move Slowly and Don't Break Things}
+\chapter{Avancer lentement sans rien casser}
 \label{les:18}
 
-\begin{chapquote}{Lewis Carroll, \textit{Alice in Wonderland}}
-So the boat wound slowly along, beneath the bright summer-day, with its merry crew and its music of voices and laughter\ldots
+\begin{chapquote}{Lewis Carroll, \textit{Les aventures d'Alice sous terre}}
+Aussi la barque serpentait-elle doucement, sous le brillant jour d’été, avec son
+joyeux équipage et sa musique de voix et d’éclats de rire\ldots
 \end{chapquote}
 
-It might be a dead mantra, but \enquote{move fast and break things} is still how
-much of the tech world operates. The idea that it doesn't matter if you
-get things right the first time is a basic pillar of the \textit{fail early,
-fail often} mentality. Success is measured in growth, so as long as you
-are growing everything is fine. If something doesn't work at first you
-simply pivot and iterate. In other words: throw enough shit against the
-wall and see what sticks.
+J'enfonce peut-être des portes ouvertes, mais le monde de la tech fonctionne
+toujours aujourd'hui en \enquote{avançant vite et en cassant des trucs}. L'idée
+de ne pas s'efforcer à réussir du premier coup est une des bases de la mentalité
+\textit{échoue tôt, échoue souvent}. Le succès se mesure à la croissance, donc
+tant que vous grandissez, tout ira bien. Si quelque chose ne fonctionne pas
+comme prévu vous n'avez qu'à pivoter et itérer. En d'autres termes : si vous
+jetez assez de merde contre le mur, vous verrez bien ce qui colle.
 
-Bitcoin is very different. It is different by design. It is different
-out of necessity. As Satoshi pointed out, e-currency has been tried
-many times before, and all previous attempts have failed because there
-was a head which could be cut off. The novelty of Bitcoin is that it is
-a beast without heads.
-
-\begin{quotation}\begin{samepage}
-\enquote{A lot of people automatically dismiss e-currency as a lost cause
-because of all the companies that failed since the 1990's. I hope it's
-obvious it was only the centrally controlled nature of those systems
-that doomed them.}
-\begin{flushright} -- Satoshi Nakamoto\footnote{Satoshi Nakamoto, in a reply to Sepp Hasslberger \cite{satoshi-centralized-nature}}
-\end{flushright}\end{samepage}\end{quotation}
-
-One consequence of this radical decentralization is an inherent
-resistance to change. \enquote{Move fast and break things} does not and will
-never work on the Bitcoin base layer. Even if it would be desirable, it
-wouldn't be possible without convincing \textit{everyone} to change their ways.
-That's distributed consensus. That's the nature of Bitcoin.
+Bitcoin est très différent. Il l'est dès sa conception. Il est différent par
+besoin. Satoshi l'a dit lui-même, les monnaies électroniques ont été tentées à
+de nombreuses reprises et tous ces essais ont échoué car il y avait une tête à
+faire tomber. L'innovation de Bitcoin, c'est d'être un animal sans tête.
 
 \begin{quotation}\begin{samepage}
-\enquote{The nature of Bitcoin is such that once version 0.1 was released, the
-core design was set in stone for the rest of its lifetime.}
-\begin{flushright} -- Satoshi Nakamoto\footnote{Satoshi Nakamoto, in a reply to Gavin Andresen \cite{satoshi-centralized-nature}}
+\enquote{Beaucoup de gens refusent par réflexe l'idée des monnaies électroniques
+à cause de toutes les entreprises qui ont échoué dans les années 90. J'espère
+qu'il est clair que c'est la nature du contrôle centralisé de ces systèmes qui a
+causé leur perte.}
+\begin{flushright} -- Satoshi Nakamoto\footnote{Satoshi Nakamoto, dans une
+réponse à Sepp Hasslberger \cite{satoshi-centralized-nature}}
 \end{flushright}\end{samepage}\end{quotation}
 
-This is one of the many paradoxical properties of Bitcoin. We all came
-to believe that anything which is software can be changed easily. But
-the nature of the beast makes changing it bloody hard.
-
-As Hasu beautifully shows in Unpacking Bitcoin's Social
-Contract~\cite{social-contract}, changing the rules of Bitcoin is only possible
-by \textit{proposing} a change, and consequently \textit{convincing} all users
-of Bitcoin to adopt this change. This makes Bitcoin very resilient to change,
-even though it is software.
-
-This resilience is one of the most important properties of Bitcoin.
-Critical software systems have to be antifragile, which is what the
-interplay of Bitcoin's social layer and its technical layer guarantees.
-Monetary systems are adversarial by nature, and as we have known for
-thousands of years solid foundations are essential in an adversarial
-environment.
+Une des conséquences de cette décentralisation radicale est la résistance
+inhérente au changement. \enquote{Avancer vite en cassant des trucs} ne
+fonctionne et ne fonctionnera jamais sur la couche de base de Bitcoin. Même si
+on le voulait, ce ne serait pas possible sans convaincre \textit{tout le monde}
+de changer sa façon de faire. Voilà ce qu'est le consensus distribué. Voilà la
+nature de Bitcoin.
 
 \begin{quotation}\begin{samepage}
-\enquote{The rain came down, the floods came, and the winds blew, and beat on
-that house; and it didn't fall, for it was founded on the rock.}
-\begin{flushright} -- Matthew 7:24--27
+\enquote{La nature de Bitcoin est telle qu'une fois sortie la version 0.1, les
+concepts essentiels étaient gravés dans le marbre pour le restant de ses jours.}
+\begin{flushright} -- Satoshi Nakamoto\footnote{Satoshi Nakamoto, dans une
+réponse à Gavin Andresen \cite{satoshi-centralized-nature}}
 \end{flushright}\end{samepage}\end{quotation}
 
-Arguably, in this parable of the wise and the foolish builders Bitcoin
-isn't the house. It is the rock. Unchangeable, unmoving, providing the
-foundation for a new financial system.
+C'est l'une des nombreuses propriétés paradoxales de Bitcoin. Nous avons tous
+fini par croire que tout logiciel peut facilement être modifié. Mais la nature
+de cet animal rend tout changement sacrément difficile.
 
-Just like geologists, who know that rock formations are always moving
-and evolving, one can see that Bitcoin is always moving and evolving as
-well. You just have to know where to look and how to look at it.
+Comme Hasu l'écrit élégamment dans Décortiquer le contrat social de Bitcoin
+\cite{social-contract}, on ne peut changer ses règles qu'en
+\textit{proposant} un changement et par conséquent en \textit{convainquant} tous
+les utilisateurs de Bitcoin de l'adopter. Bien qu'il soit un logiciel, cela rend
+Bitcoin très résilient au changement.
 
-The introduction of pay to script hash\footnote{ Pay to script hash (P2SH)
-transactions were standardised in BIP 16. They allow transactions to be sent to
-a script hash (address starting with 3) instead of a public key hash (addresses
-starting with 1).~\cite{btcwiki:p2sh}} and segregated
-witness\footnote{Segregated Witness (abbreviated as SegWit) is an implemented
-protocol upgrade intended to provide protection from transaction malleability
-and increase block capacity. SegWit separates the \textit{witness} from the list
-of inputs.~\cite{btcwiki:segwit}} are proof that Bitcoin's rules can be changed
-if enough users are convinced that adopting said change is to the benefit of the
-network. The latter enabled the development of the lightning
-network\footnote{\url{https://lightning.network/}}, which is one of the houses
-being built on Bitcoin's solid foundation. Future upgrades like Schnorr
-signatures~\cite{bip:schnorr} will enhance efficiency and privacy, as well as
-scripts (read: smart contracts) which will be indistinguishable from regular
-transactions thanks to Taproot~\cite{taproot}. Wise builders do indeed build on
-solid foundations.
-
-Satoshi wasn't only a wise builder technologically. He also understood
-that it would be necessary to make wise decisions ideologically.
+Cette résilience est l'un des attributs de Bitcoin les plus importants. Les
+systèmes logiciels critiques se doivent d'être anti-fragile, ce qui est garanti
+par l'interaction entre les couches sociales et techniques de Bitcoin. Les
+systèmes monétaires sont agressifs par nature et nous le savons depuis des
+milliers d'années, un environnement agressif requiert des fondations solides.
 
 \begin{quotation}\begin{samepage}
-\enquote{Being open source means anyone can independently review the code. If
-it was closed source, nobody could verify the security. I think it's
-essential for a program of this nature to be open source.}
-\begin{flushright} -- Satoshi Nakamoto\footnote{Satoshi Nakamoto, in a reply to SmokeTooMuch \cite{satoshi-open-source}}
+\enquote{La pluie est tombée, les torrents sont venus, les vents ont soufflé et
+se sont jetés contre cette maison : elle n'est point tombée, parce qu'elle était
+fondée sur le roc.}
+\begin{flushright} -- Matthieu 7:25
 \end{flushright}\end{samepage}\end{quotation}
 
-Openness is paramount to security and inherent in open source and the
-free software movement. As Satoshi pointed out, secure protocols and the
-code which implements them have to be open --- there is no security
-through obscurity. Another benefit is again related to decentralization:
-code which can be run, studied, modified, copied, and distributed freely
-ensures that it is spread far and wide.
+Vraisemblablement, dans cette parabole des bâtisseurs sages et sots, Bitcoin
+n'est pas la maison. C'est le roc. Invariable, stable, apportant le socle d'un
+nouveau système financier.
 
-The radically decentralized nature of Bitcoin is what makes it move
-slowly and deliberately. A network of nodes, each run by a sovereign
-individual, is inherently resistant to change --- malicious or not. With
-no way to force updates upon users the only way to introduce changes is
-by slowly convincing each and every one of those individuals to adopt a
-change. This non-central process of introducing and deploying changes is
-what makes the network incredibly resilient to malicious changes. It is
-also what makes fixing broken things more difficult than in a
-centralized environment, which is why everyone tries not to break things
-in the first place.
+À l'image des géologues qui savent que les formations rocheuses évoluent et sont
+toujours en mouvement, on peut s'apercevoir que Bitcoin bouge et évolue. Il faut
+juste savoir où et comment regarder.
 
-\paragraph{Bitcoin taught me that moving slowly is one of its features, not a
-bug.}
+L'introduction du \textit{pay to script hash}\footnote{Les transactions Pay to
+Script Hash (P2SH) ont été normalisées dans le BIP16. Elles permettent aux
+transactions d'être envoyées à un hash de script (adresse commençant par 3) au
+lieu d'un hash d'adresse publique (adresse commençant par
+1).~\cite{btcwiki:p2sh}} et de \textit{segregated witness}\footnote{Segregated
+Witness (abrégé en SegWit) est une mise à jour implémentée du protocole qui vise
+à fournir une protection envers la plasticité des transactions et à élargir la
+taille des blocs. SegWit sépare le \textit{témoin} (witness en anglais) de la
+liste des entrées.~\cite{btcwiki:segwit}} sont la preuve que les règles de
+Bitcoin peuvent être changées tant qu'il y assez d'utilisateurs convaincus que
+ce changement bénéficie au réseau. SegWit a permis le développement du réseau
+Lightning\footnote{\url{https://lightning.network/}} qui est l'une des maisons
+en construction sur le socle solide de Bitcoin. Des mises à jour futures comme
+les signatures de Schnorr~\cite{bip:schnorr} amélioreront l'efficacité et la
+confidentialité, ainsi que les scripts (comprendre: contrats intelligents) qui
+seront indiscernables des transactions classiques grâce à
+Taproot~\cite{taproot}. Les sages bâtisseurs construisent bel et bien sur des
+fondations solides.
+
+Satoshi n'était pas seulement un sage bâtisseur de technologie. Il comprenait
+aussi la nécessité de prendre de sages décisions idéologiques.
+
+\begin{quotation}\begin{samepage}
+\enquote{Être open source veut dire que quiconque peut personnellement vérifier
+le code. Si les sources étaient privées, personne ne pourrait vérifier la
+sécurité. Je pense qu'un programme de cette nature doit obligatoirement être
+open source.}
+\begin{flushright} -- Satoshi Nakamoto\footnote{Satoshi Nakamoto, dans une
+réponse à SmokeTooMuch \cite{satoshi-open-source}}
+\end{flushright}\end{samepage}\end{quotation}
+
+L'ouverture est primordiale à la sécurité et inhérente à l'open source et au
+mouvement du logiciel libre. Comme Satoshi le faisait remarquer, les protocoles
+sécurisés et le code qui les implémente doivent être ouverts --- l'obscurité ne
+procure aucune sécurité. Encore une fois, un autre avantage est lié à la
+décentralisation : du code qui peut être exécuté, lu, modifié, copié et
+distribué librement garantit sa diffusion rapide et étendue.
+
+La nature radicalement décentralisée de Bitcoin est ce qui lui permet de se
+déplacer lentement et sciemment. Un réseau de nœuds, détenus par des
+individus souverains, est intrinsèquement résistant au changement ---
+malveillant ou pas. Sans possibilité de forcer des mises à jour, la seule façon
+d'introduire des modifications est de convaincre lentement chacun des
+participants de l'adopter. Ce procédé décentralisé de proposer et de déployer
+les changements est ce qui rend le réseau extraordinairement résilient face aux
+modifications malveillantes. C'est aussi ce qui rend les réparations plus
+complexes que dans un environnement centralisé et qui explique que tout le monde
+cherche avant tout à ne rien casser.
+
+\paragraph{Bitcoin m'a appris qu'avancer lentement était une fonctionnalité, pas
+un bug.}
 
 % ---
 %
