--- a/lessons/ch3-20-cypherpunks-write-code.tex
+++ b/lessons/ch3-20-cypherpunks-write-code.tex
@@ -1,82 +1,86 @@
-\chapter{Cypherpunks Write Code}
+\chapter{Les cypherpunks écrivent du code}
 \label{les:20}
 
-\begin{chapquote}{Lewis Carroll, \textit{Alice in Wonderland}}
-\enquote{I see you're trying to invent something.}
+\begin{chapquote}{Lewis Carroll, \textit{Alice au pays des merveilles}}
+\enquote{Je vois bien que vous essayez d’inventer quelque chose !}
 \end{chapquote}
 
-Like many great ideas, Bitcoin didn't come out of nowhere. It was made
-possible by utilizing and combining many innovations and discoveries in
-mathematics, physics, computer science, and other fields. While
-undoubtedly a genius, Satoshi wouldn't have been able to invent Bitcoin
-without the giants on whose shoulders he was standing on.
+Comme beaucoup de grandes idées, Bitcoin n'est pas sorti de nulle part. Il a vu
+le jour en utilisant et en combinant beaucoup d'innovations et de découvertes en
+mathématiques, en physique, en informatique et dans d'autres domaines. Satoshi
+est sans conteste un génie mais il n'aurait pas pu inventer Bitcoin sans se
+tenir sur des épaules de géants.
 
 \begin{quotation}\begin{samepage}
-\enquote{He who only wishes and hopes does not interfere actively with the
-course of events and with the shaping of his own destiny.}
-\begin{flushright} -- Ludwig von Mises\footnote{Ludwig von Mises, \textit{Human Action} \cite{human-action}}
+
+\enquote{Celui qui simplement souhaite et espère n'intervient pas activement
+dans le cours des événements ni dans le profil de sa destinée.}
+\begin{flushright} -- Ludwig von Mises\footnote{Ludwig von Mises,
+\textit{L’Action Humaine} \cite{human-action}}
 \end{flushright}\end{samepage}\end{quotation}
 % > <cite>[Ludwig Von Mises]</cite>
 
-One of these giants is Eric Hughes, one of the founders of the cypherpunk
-movement and author of \textit{A Cypherpunk's Manifesto}. It's hard to imagine
-that Satoshi wasn't influenced by this manifesto. It speaks of many things which
-Bitcoin enables and utilizes, such as direct and private transactions,
-electronic money and cash, anonymous systems, and defending privacy with
-cryptography and digital signatures.
+L'un de ces géants, c'est Eric Hughes, un des fondateurs du mouvement cypherpunk
+et auteur du \textit{Manifeste d'un Cypherpunk}. Ça paraît difficile d'imaginer
+que Satoshi n'ait pas été influencé par ce manifeste. Il parle de tellement de
+choses que Bitcoin permet et utilise, telles que les transactions privées
+directes, l'argent électronique et liquide, les systèmes anonymes et la
+protection de la vie privée par la cryptographie et les signatures numériques.
 
 \begin{quotation}\begin{samepage}
-\enquote{Privacy is necessary for an open society in the electronic age.
-[...] Since we desire privacy, we must ensure that each party to a
-transaction have knowledge only of that which is directly necessary
-for that transaction. [...]
-Therefore, privacy in an open society requires anonymous transaction
-systems. Until now, cash has been the primary such system. An
-anonymous transaction system is not a secret transaction system.
-[...]
-We the Cypherpunks are dedicated to building anonymous systems. We are
-defending our privacy with cryptography, with anonymous mail
-forwarding systems, with digital signatures, and with electronic
-money.
-Cypherpunks write code.}
-\begin{flushright} -- Eric Hughes\footnote{Eric Hughes, A Cypherpunk's Manifesto \cite{cypherpunk-manifesto}}
+\enquote{La confidentialité est nécessaire pour une société ouverte à l'ère
+électronique. [...] Puisque nous désirons la confidentialité, nous devons nous
+assurer que chaque partie à une transaction n'a connaissance que de ce qui est
+directement nécessaire à cette transaction. [...]
+Par conséquent, la vie privée dans une société ouverte nécessite des systèmes de
+transaction anonymes. Jusqu'à présent, l'argent liquide a été le principal
+système de ce type. Un système de transaction anonyme n'est pas un système de
+transaction secret. [...]
+Nous les Cypherpunks sommes dédiés à la construction de systèmes anonymes. Nous
+défendons notre vie privée avec la cryptographie, avec des systèmes de transfert
+de courrier anonyme, avec des signatures numériques et avec de la monnaie
+électronique.
+Les Cypherpunks écrivent du code.}
+\begin{flushright} -- Eric Hughes\footnote{Eric Hughes, Manifeste d'un
+Cypherpunk \cite{cypherpunk-manifesto}}
 \end{flushright}\end{samepage}\end{quotation}
 
-Cypherpunks do not find comfort in hopes and wishes. They actively
-interfere with the course of events and shape their own destiny.
-Cypherpunks write code.
+Les Cypherpunks ne trouvent pas de réconfort dans les espoirs et les vœux. Ils
+s'immiscent activement dans le cours des événements et forgent leur propre
+destinée. Les Cypherpunks écrivent du code.
 
-Thus, in true cypherpunk fashion, Satoshi sat down and started to write
-code. Code which took an abstract idea and proved to the world that it
-actually worked. Code which planted the seed of a new economic reality.
-Thanks to this code, everyone can verify that this novel system actually
-works, and every 10 minutes or so Bitcoin proofs to the world that it is
-still living.
+Et donc, en fidèle cypherpunk, Satoshi s'est assis et s'est mis à coder. Du code
+parti d'une idée abstraite pour prouver au monde qu'elle pouvait marcher. Du
+code semant la graine d'une nouvelle réalité économique. Grâce au code, chacun
+peut vérifier que ce système novateur fonctionne vraiment et qu'à peu près
+toutes les 10 minutes, Bitcoin prouve au monde qu'il est encore vivant.
 
 \begin{figure}
   \includegraphics{assets/images/bitcoin-code-white.png}
-  \caption{Code excerpts from Bitcoin version 0.1}
+  \caption{Extraits du code de la version 0.1 de Bitcoin}
   \label{fig:bitcoin-code-white}
 \end{figure}
 
-To make sure that his innovation transcends fantasy and becomes reality, Satoshi
-wrote code to implement his idea before he wrote the whitepaper. He also made
-sure not to delay\footnote{\enquote{We shouldn't delay forever until every possible
-feature is done.} -- Satoshi Nakamoto~\cite{satoshi-delay}} any release forever.
-After all, \enquote{there's always going to be one more thing to do.}
+Afin de s'assurer que son invention ne resterait pas du domaine du rêve, Satoshi
+a écrit le code de son idée avant d'écrire le livre blanc. Il a aussi pris soin
+de ne pas retarder\footnote{\enquote{Nous ne devrions pas reporter indéfiniment
+tant que chaque fonction n'est pas terminée.} -- Satoshi
+Nakamoto~\cite{satoshi-delay}} chaque version indéfiniment. Après tout,
+\enquote{il y aura toujours autre chose à faire}.
 
 \begin{quotation}\begin{samepage}
-\enquote{I had to write all the code before I could convince myself that I
-could solve every problem, then I wrote the paper.}
-\begin{flushright} -- Satoshi Nakamoto\footnote{Satoshi Nakamoto, Re: Bitcoin P2P e-cash paper \cite{satoshi-mail-code-first}}
+\enquote{J'ai dû écrire tout le code avant d'être convaincu que je pouvais
+résoudre chaque problème, puis j'ai écrit le livre blanc.}
+\begin{flushright} -- Satoshi Nakamoto\footnote{Satoshi Nakamoto, dans Re:
+Bitcoin P2P e-cash paper \cite{satoshi-mail-code-first}}
 \end{flushright}\end{samepage}\end{quotation}
 
-In today's world of endless promises and doubtful execution, an exercise
-in dedicated building was desperately needed. Be deliberate, convince
-yourself that you can actually solve the problems, and implement the
-solutions. We should all aim to be a bit more cypherpunk.
+Dans ce monde aux promesses infinies et au déroulement douteux, la mise en
+pratique d'un développement dévoué manquait cruellement. Soyez volontaires,
+persuadez-vous d'être capable de résoudre les problèmes et implémentez les
+solutions. On devrait tous essayer d'être un peu plus cypherpunk.
 
-\paragraph{Bitcoin taught me that cypherpunks write code.}
+\paragraph{Bitcoin m'a appris que les cypherpunks écrivaient du code.}
 
 % ---
 %
