--- a/quote.tex
+++ b/quote.tex
@@ -4,7 +4,9 @@
 \begin{quotation}
 \begin{center}
   \large
-  \enquote{Oh, you foolish Alice!} she said again, \enquote{how can you learn lessons in here? Why, there's hardly room for you, and no room at all for any lesson-books!}
+  \enquote{Ma pauvre Alice, ce que tu peux être sotte !} se répondit-elle.
+  \enquote{Comment pourrais-tu apprendre des leçons ici ? C’est tout juste s’il
+  y a assez de place pour toi, et il n’y en a pas du tout pour un livre de classe !}
 \end{center}
-\begin{flushright} -- Lewis Carroll, \textit{Alice in Wonderland}\end{flushright}
+\begin{flushright} -- Lewis Carroll, \textit{Alice au pays des merveilles}\end{flushright}
 \end{quotation}
