--- a/backmatter/acknowledgments.tex
+++ b/backmatter/acknowledgments.tex
@@ -1,25 +1,45 @@
-\chapter*{Acknowledgments}
-\pdfbookmark{Acknowledgments}{acknowledgments}
+\chapter*{Remerciements}
+\pdfbookmark{Remerciements}{acknowledgments}
 
-Thanks to the countless authors and content producers who influenced my thinking
-on Bitcoin and the topics it touches. There are too many to list them all, but
-I’ll do my best to name a few.
+Je remercie les innombrables auteurs et créateurs de contenu qui ont
+influencé ma pensée sur Bitcoin et les sujets qu'il touche. Il y en a beacoup
+trop pour tous les citer, mais je vais faire de mon mieux pour les nommer.
 
 \begin{itemize}
-  \item Thanks to Arjun Balaji for the tweet which motivated me to write this.
-  \item Thanks to Marty Bent for providing endless food for thought and entertainment. If you are not subscribed to Marty’s Bent and Tales From The Crypt, you are missing out. Cheers Matt and Marty for guiding us through the rabbit hole.
-  \item Thanks to Michael Goldstein and Pierre Rochard for curating and providing the greatest Bitcoin literature via the Nakamoto Institute. And thank you for creating the Noded Podcast which influenced my philosophical views on Bitcoin substantially.
-  \item Thanks to Saifedean Ammous for his convictions, savage tweets, and writing The Bitcoin Standard
-  \item Thanks to Francis Pouliot for sharing his excitement about finding out about the timechain.
-  \item Thanks to Andreas M. Antonopoulos for all the educational material he has put out over the years.
-  \item Thanks to Peter McCormack for his honest tweets and the What Bitcoin Did podcast, which keeps providing great insights from many areas of the space.
-  \item Thanks to Jannik, Brandon, Matt, Camilo, Daniel, Michael, and Raphael for providing feedback to early drafts of some lessons. Special thanks to Jannik who proofread multiple drafts multiple times.
-  \item Thanks to Dhruv Bansal and Matt Odell for taking the time to discuss some of these ideas with me.
-  \item Thanks to Guy Swann for producing an audio version of 21lessons.com.
-  \item Thanks to Friar Hass for his spiritual support and guidance, and for taking the time to write a foreword for this book.
-  \item Thanks to my wife for putting up with me and my obsessive nature.
-  \item Thanks to my family for supporting me during both the good times and the bad.
-  \item Last but not least, thanks to all the bitcoin maximalists, shitcoin minimalists, shills, bots, and shitposters which reside in the beautiful garden that is Bitcoin twitter.
+  \item Merci à Arjun Balaji pour le tweet qui m'a motivé à écrire ceci.
+  \item Merci à Marty Bent d'avoir sans cesse fourni des éléments de réflexion
+  et de l'amusement. Si vous ne suivez pas Marty Bent et ses Tales From The
+  Crypt, vous ratez quelque chose. Bravo Matt et Marty de nous guider dans le
+  terrier du lapin.
+  \item Merci à Michael Goldstein et Pierre Rochard d'extraire et de fournir la
+  meilleure littérature sur Bitcoin grâce au Nakamoto Institute. Et merci
+  d'avoir créé le podcast Noded qui a grandement influencé ma vision
+  philosophique de Bitcoin.
+  \item Merci à Saifedean Ammous pour ses convictions, ses tweets sauvages et
+  pour avoir écrit L'Étalon Bitcoin
+  \item Merci à Francis Pouliot de partager son enthousiasme et d'avoir
+  découvert les mentions de la timechain.
+  \item Merci à Andreas M. Antonopoulos pour tout le contenu éducatif qu'il a
+  créé année après année.
+  \item Merci à Peter McCormack pour ses tweets honnêtes et le podcast What
+  Bitcoin Did, qui continue encore à donner de bonnes perspectives des nombreux
+  secteurs de l'écosystème.
+  \item Merci à Jannik, Brandon, Matt, Camilo, Daniel, Michael, et Raphael
+  d'avoir donné votre retour sur les ébauches de certaines leçons. Un merci tout
+  particulier à Jannik qui a relu de multiples ébauches à de nombreuses
+  reprises.
+  \item Merci à Dhruv Bansal et Matt Odell d'avoir pris le temps de discuter de
+  certaines de ces idées avec moi.
+  \item Merci à Guy Swann d'avoir enregistré une version audio de 21lessons.com.
+  \item Merci au Frère Hass pour son soutien moral et ses conseils et pour avoir
+  pris le temps d'écrire l'avant-propos de ce livre.
+  \item Merci à ma femme de m'avoir enduré, moi et ma nature obsessionnelle.
+  \item Merci à ma famille de me supporter à la fois pendant les bons et les
+  mauvais moments.
+  \item Enfin, mais non des moindres, merci à tous les maximalistes Bitcoin, à
+  tous les minimalistes des shitcoins, les porte-paroles, les bots et les
+  shitposters qui vivent dans ce jardin magnifique qu'est Bitcoin Twitter.
 \end{itemize}
 
-And finally, thank you for reading this. I hope you enjoyed it as much as I did enjoy writing it.
+Enfin, merci à vous d'avoir lu ceci. J'espère que ça vous a plu autant que j'ai
+aimé l'écrire.
