--- a/frontmatter/about.tex
+++ b/frontmatter/about.tex
@@ -8,78 +8,82 @@
   }%
 }
 
-\chapter*{About This Book \\ (... and About the Author)}
-\pdfbookmark{About This Book (... and About the Author)}{about}
+\chapter*{À propos de ce livre \\ (... et de son auteur)}
+\pdfbookmark{À propos de ce livre (... et de son auteur)}{about}
 
-This is a bit of an unusual book. But hey, Bitcoin is a bit of an unusual
-technology, so an unusual book about Bitcoin might be fitting. I'm not sure if
-I'm an unusual guy (I like to think of myself as a \textit{regular} guy) but the
-story of how this book came to be, and how I came to be an author, is worth
-telling.
+Il s'agit d'un livre un peu particulier. Mais bon, Bitcoin est aussi une
+technologie un peu particulière, donc un livre particulier à propos de Bitcoin
+est sans doute adapté. Je ne sais pas vraiment si je suis un mec particulier
+(j'aime bien penser que je suis un mec \textit{normal}) mais l'histoire de ce
+livre, et de comment j'en suis venu à devenir auteur, mérite d'être racontée.
 
-First of all, I'm not an author. I'm an engineer. I didn't study writing. I
-studied code and coding. Second of all, I never intended to write a book, let
-alone a book about Bitcoin. Hell, I'm not even a native speaker.\footnote{The
-reason why I'm writing these words in English is that my brain works in
-mysterious ways. Whenever something technical comes up, it switches to English
-mode.} I'm just a guy who caught the Bitcoin bug. Hard.
+Premièrement, je ne suis pas auteur. Je suis ingénieur. Je n'ai pas étudié
+les lettres. J'ai appris le code et comment coder. Deuxièmement, je n'ai jamais
+eu l'intention d'écrire un livre, encore moins un livre sur Bitcoin. Bon sang,
+ce n'est même pas ma langue maternelle.\footnote{La raison pour laquelle
+j'écris ce livre en anglais, c'est que mon cerveau fonctionne d'une manière
+bizarre. Dès que ça devient technique, il passe tout seul à l'anglais.} Je suis
+juste un gars qui a attrapé le virus Bitcoin. Gravement.
 
-Who am \textit{I} to write a book about Bitcoin? That's a good question. The
-short answer is easy: I'm Gigi, and I'm a bitcoiner.
+Qui suis-\textit{je} alors pour écrire un livre sur Bitcoin ? Bonne question. En
+bref, la réponse est simple : je suis Gigi et je suis un bitcoiner.
 
-The long answer is a bit more nuanced.
-
-\paragraph{}
-My background is in computer science and software development. In a
-previous life, I was part of a research group that tried to make computers think
-and reason, among other things. In yet another previous life I wrote software
-for automated passport processing and related stuff which is even scarier. I
-know a thing or two about computers and our networked world, so I guess I have a
-bit of a head-start to understand the technical side of Bitcoin. However, as I
-try to outline in this book, the tech side of things is only a tiny sliver of
-the beast which is Bitcoin. And every single one of these slivers is important.
-
-This book came to be because of one simple question: \textit{\enquote{What have
-you learned from Bitcoin?}} I tried to answer this question in a single tweet.
-Then the tweet turned into a tweetstorm. The tweetstorm turned into an article.
-The article turned into three articles. Three articles turned into 21 Lessons.
-And 21 Lessons turned into this book. So I guess I'm just really bad at
-condensing my thoughts into a single tweet.
+Mais le développement est un peu plus nuancé.
 
 \paragraph{}
-\textit{\enquote{Why write this book?}}, you might
-ask. Again, there is a short and a long answer. The short answer is that I
-simply had to. I was (and still am) \textit{possessed} by Bitcoin. I find it to
-be endlessly fascinating. I can't seem to stop thinking about it and the
-implications it will have on our global society. The long answer is that I
-believe that Bitcoin is the single most important invention of our time, and
-more people need to understand the nature of this invention. Bitcoin is
-still one of the most misunderstood phenomena of our modern world, and it took
-me years to fully realize the gravitas of this alien technology. Realizing what
-Bitcoin is and how it will transform our society is a profound experience. I
-hope to plant the seeds which might lead to this realization in your head.
+Je viens de l'informatique et du développement logiciel. Dans une vie
+antérieure, j'étais dans une équipe de recherche qui tentait d'apprendre à
+penser et à réfléchir à des ordinateurs, entre autres choses. Dans une vie
+encore plus ancienne, j'écrivais des logiciels de traitement automatisé de
+passeports et d'autres trucs du même style, ce qui est encore plus effrayant. Je
+m'y connais un peu en informatique et en réseaux, donc j'imagine que j'ai
+quelques longueurs d'avance pour comprendre l'aspect technique de Bitcoin. En
+revanche, comme j'essaie de le souligner dans ce livre, cet aspect technique ne
+représente qu'une petite partie de l'animal qu'est Bitcoin. Et chacune de ses
+parties est importante.
 
-While this section is titled \enquote{\textit{About This Book (... and About the
-Author)}}, in the grand scheme of things, this book, who I am, and what I did
-doesn't really matter. I am just a node in the network, both literally
-\textit{and} figuratively. Plus, you shouldn't trust what I'm saying anyway. As
-we bitcoiners like to say: do your own research, and most importantly: don't
-trust, verify.
-
-I did my best to do my homework and provide plenty of sources for you, dear
-reader, to dive into. In addition to the footnotes and citations in this book, I
-try to keep an updated list of resources at
-\href{https://21lessons.com/rabbithole}{21lessons.com/rabbithole} and on
-\href{https://bitcoin-resources.com}{bitcoin-resources.com}, which also lists
-plenty of other curated resources, books, and podcasts that will help you to
-understand what Bitcoin is.
+Ce livre a vu le jour grâce à une seule question toute bête :
+\textit{\enquote{Qu'avez-vous appris de Bitcoin ?}}. J'ai tenté d'y répondre
+d'un simple tweet. Puis le tweet est devenu tempête de tweets. Cette tempête
+s'est transformée en article. L'article a évolué en trois articles. Trois
+articles sont devenus 21 leçons. Et 21 leçons ont engendré ce livre. Du coup, je
+suppose que je suis juste nul pour résumer ma pensée en un seul tweet.
 
 \paragraph{}
-In short, this is simply a book about Bitcoin, written by a bitcoiner.
-Bitcoin doesn't need this book, and you probably don't need this book to
-understand Bitcoin. I believe that Bitcoin will be understood by you as soon as
-\textit{you} are ready, and I also believe that the first fractions of a bitcoin
-will find you as soon as you are ready to receive them. In essence, everyone
-will get \bitcoinB{}itcoin at exactly the right time. In the meanwhile, Bitcoin
-simply is, and that is enough.\footnote{Beautyon, \textit{Bitcoin is. And that
-is enough.}~\cite{bitcoin-is}}
+\textit{\enquote{Pourquoi écrire ce livre ?}}, me direz-vous. À nouveau, deux
+réponses : une courte et une longue. La courte, c'est que je devais le faire.
+J'étais (et suis toujours) \textit{possédé} par Bitcoin. Il ne cesse de me
+fasciner. Je ne peux m'arrêter de penser à lui et aux implications qu'il aura
+dans nos sociétés. La réponse longue, c'est que je crois que Bitcoin est
+l'invention la plus importante de notre époque et que la nature de cette
+invention doit être comprise par le plus grand nombre. Bitcoin reste l'un des
+phénomènes les plus mal compris du monde actuel et ça m'a pris des années pour
+réaliser pleinement le sérieux de cette technologie extraterrestre. Comprendre
+ce qu'est Bitcoin et comment il va transformer nos sociétés est une expérience
+marquante. J'ai l'espoir de faire germer dans votre tête les graines qui
+pourraient vous conduire à cette prise de conscience.
+
+Dans l'ordre des choses, bien que ce passage soit intitulé \enquote{\textit{À
+propos de ce livre (... et de son auteur)}}, ce livre, qui je suis et ce que
+j'ai fait n'ont pas vraiment d'importance. Je suis juste un nœud du réseau, à la
+fois littéralement \textit{et} métaphoriquement. De toute façon, vous ne devriez
+pas croire ce que je dis. Comme nous, bitcoiners, aimons le répéter : faites vos
+propres recherches. Et par-dessus tout : ne vous fiez pas, vérifiez.
+
+J'ai fait mes recherches au mieux afin de vous permettre, cher lecteur, de vous
+plonger dans de nombreuses ressources. En plus des notes et des citations de ce
+livre, j'essaie de garder à jour une liste de contenu sur
+\href{https://21lessons.com/rabbithole}{21lessons.com/rabbithole} et sur
+\href{https://bitcoin-resources.com}{bitcoin-resources.com}, qui recense
+également plein d'autres morceaux choisis, livres, podcasts, qui vous aideront à
+comprendre ce qu'est Bitcoin.
+
+\paragraph{}
+En résumé, c'est juste un livre qui parle de Bitcoin, écrit par un bitcoiner.
+Bitcoin n'a pas besoin de ce livre, et vous n'avez sans doute pas besoin de ce
+livre pour comprendre Bitcoin. Je pense que vous comprendrez Bitcoin dès que
+\textit{vous} serez prêt et je crois aussi que vos premières fractions d'un
+bitcoin vous trouveront dès que vous serez prêt à les recevoir. Par essence,
+chacun obtiendra \bitcoinB{}itcoin exactement au bon moment. Dans l'intervalle,
+Bitcoin existe et c'est bien suffisant.\footnote{Beautyon, \textit{Bitcoin is.
+And that is enough.}~\cite{bitcoin-is}}
