--- a/lessons/ch1-05-an-immaculate-conception.tex
+++ b/lessons/ch1-05-an-immaculate-conception.tex
@@ -1,50 +1,56 @@
-\chapter{An Immaculate Conception}
+\chapter{L'Immaculée Conception}
 \label{les:5}
 
-\begin{chapquote}{Lewis Carroll, \textit{Alice in Wonderland}}
-\enquote{Their heads are gone,} the soldiers shouted in reply\ldots
+\begin{chapquote}{Lewis Carroll, \textit{Alice au pays des merveilles}}
+\enquote{Leur tête a disparu, [...]} répondirent les soldats.
 \end{chapquote}
 
-Everyone loves a good origin story. The origin story of Bitcoin is a
-fascinating one, and the details of it are more important than one might
-think at first. Who is Satoshi Nakamoto? Was he one person or a group of
-people? Was he a she? Time-traveling alien, or advanced AI? Outlandish
-theories aside, we will probably never know. And this is important.
+Ça parle à tout le monde lorsqu'une belle histoire donne lieu à une naissance.
+Celle de Bitcoin est fascinante et ses détails sont plus importants qu'on
+pourrait le croire à première vue. Qui est Satoshi Nakamoto ? Était-ce une seule
+personne ou un groupe ? Était-ce un homme ou une femme ? Un extraterrestre qui
+aurait voyagé dans le temps, ou une intelligence artificielle avancée ? Sans
+tenir compte des théories absurdes, nous ne le saurons sans doute jamais. Et ça
+a toute son importance.
 
-Satoshi chose to be anonymous. He planted the seed of Bitcoin. He stuck
-around for long enough to make sure the network won't die in its
-infancy. And then he vanished.
+Satoshi a choisi de rester anonyme. Il a fait germer la graine de Bitcoin. Il
+est resté dans le coin suffisamment longtemps pour s'assurer que le réseau ne
+connaîtrait pas une mort prématurée. Et il s'est évaporé.
 
-What might look like a weird anonymity stunt is actually crucial for a
-truly decentralized system. No centralized control. No centralized
-authority. No inventor. No-one to prosecute, torture, blackmail, or
-extort. An immaculate conception of technology.
+Ce qui peut sembler une étrange pirouette à propos de l'anonymat est en réalité
+une chose cruciale pour qu'un système soit vraiment décentralisé. Pas de
+contrôle centralisé. Pas d'autorité centrale. Pas d'inventeur identifié.
+Personne à poursuivre, à torturer, à faire chanter ou à extorquer. L'Immaculée
+Conception d'une technologie.
 
 \begin{quotation}\begin{samepage}
-\enquote{One of the greatest things that Satoshi did was disappear.}
-\begin{flushright} -- Jimmy Song\footnote{Jimmy Song, \textit{Why Bitcoin is Different} \cite{bitcoin-different}}
+\enquote{L'une des meilleures choses que Satoshi ait faites a été de
+disparaître.}
+\begin{flushright} -- Jimmy Song\footnote{Jimmy Song, \textit{Pourquoi Bitcoin
+est différent} \cite{bitcoin-different}}
 \end{flushright}\end{samepage}\end{quotation}
 
 \newpage
 
-Since the birth of Bitcoin, thousands of other cryptocurrencies were
-created. None of these clones share its origin story. If you want to
-supersede Bitcoin, you will have to transcend its origin story. In a war
-of ideas, narratives dictate survival.
+Depuis la naissance de Bitcoin, des milliers d'autres cryptomonnaies ont été
+créées. Aucun de ces clones ne partage l'histoire de sa naissance. Si vous
+voulez remplacer Bitcoin, vous allez devoir transcender cette histoire. Dans une
+guerre d'idées, le récit impose la survie.
 
 \begin{quotation}\begin{samepage}
-\enquote{Gold was first fashioned into jewelry and used for barter over 7,000
-years ago. Gold's captivating gleam led to it being considered a gift
-from the gods.}
-\begin{flushright} Austrian Mint\footnote{The Austrian Mint, \textit{Gold: The Extraordinary Metal} \cite{gold-gift-gods}}
+\enquote{L'or a d'abord été travaillé sous forme de bijoux et utilisé pour le
+troc il y a plus de 7000 ans. L'éclat captivant de l'or l'a mené à être
+considéré comme un cadeau des dieux.}
+\begin{flushright} Austrian Mint\footnote{The Austrian Mint, \textit{Gold: The
+Extraordinary Metal} \cite{gold-gift-gods}}
 \end{flushright}\end{samepage}\end{quotation}
 
-Like gold in ancient times, Bitcoin might be considered a gift from the
-gods. Unlike gold, Bitcoins origins are all too human. And this time, we
-know who the gods of development and maintenance are: people all over
-the world, anonymous or not.
+Comme l'or il y a bien longtemps, Bitcoin pourrait être perçu comme un cadeau
+des dieux. Mais contrairement à l'or, les origines de Bitcoin sont très
+humaines. Et cette fois, nous connaissons les dieux du développement et de la
+maintenance : des gens du monde entier, anonymes ou pas.
 
-\paragraph{Bitcoin taught me that narratives are important.}
+\paragraph{Bitcoin m'a appris que le narratif était important.}
 
 % ---
 %
