--- a/lessons/ch2-08-financial-ignorance.tex
+++ b/lessons/ch2-08-financial-ignorance.tex
@@ -1,101 +1,108 @@
-\chapter{Financial Ignorance}
+\chapter{La méconnaissance financière}
 \label{les:8}
 
-\begin{chapquote}{Lewis Carroll, \textit{Alice in Wonderland}}
-\enquote{And what an ignorant little girl she'll think me for asking! No, it'll never
-do to ask: perhaps I shall see it written up somewhere.}
+\begin{chapquote}{Lewis Carroll, \textit{Alice au pays des merveilles}}
+\enquote{Et la dame pensera que je suis une petite fille ignorante ! Non, il
+vaudra mieux ne rien demander ; peut-être que je verrai le nom écrit quelque
+part.}
 \end{chapquote}
 
-One of the most surprising things, to me, was the amount of finance,
-economics, and psychology required to get a grasp of what at first
-glance seems to be a purely \textit{technical} system --- a computer network.
-To paraphrase a little guy with hairy feet: \enquote{It's a dangerous business,
-Frodo, stepping into Bitcoin. You read the whitepaper, and if you don't
-keep your feet, there's no knowing where you might be swept off to.}
+L'une des choses qui m'a le plus frappé, c'est la quantité de finance,
+d'économie et de psychologie nécessaire à la compréhension de ce qui semble, à
+première vue, un système purement \textit{technique} -- un réseau informatique.
+Pour paraphraser un petit gars aux pieds poilus : \enquote{Il est fort
+dangereux, Frodon, d'étudier Bitcoin. On lit le livre blanc et si l'on ne
+regarde pas où l'on met les pieds, on ne sait pas jusqu'où cela peut nous
+mener.}
 
-To understand a new monetary system, you have to get acquainted with the
-old one. I began to realize very soon that the amount of financial
-education I enjoyed in the educational system was essentially \textit{zero}.
+Pour comprendre un nouveau système monétaire, il faut apprendre à connaître
+l'ancien. J'ai très vite réalisé que la quantité d'éducation financière
+reçue au sein du système scolaire était à peu près égale à \textit{zéro}.
 
 \paragraph{}
-Like a five-year-old, I began to ask myself a lot of questions: How does the
-banking system work? How does the stock market work? What is fiat money? What is
-\textit{regular} money? Why is there so much
-debt?\footnote{\url{https://www.usdebtclock.org/}} How much money is actually
-printed, and who decides that?
+Comme un enfant, j'ai commencé à me poser bon nombre de questions : comment
+fonctionne le système bancaire ? Comment fonctionnent les marchés financiers ?
+Qu'est-ce que la monnaie fiduciaire ? Qu'est-ce que la monnaie
+\textit{normale} ? Pourquoi existe-t-il autant de
+dette ?\footnote{\url{https://www.usdebtclock.org/}} Combien de monnaie est
+véritablement émise, et qui décide de ça ?
 
 \newpage
 
-After a mild panic about the sheer scope of my ignorance, I found
-reassurance in realizing that I was in good company.
+Après une légère panique face à l'ampleur de mon ignorance, je me suis senti
+rassuré lorsque j'ai constaté que j'étais en bonne compagnie.
 
 \begin{quotation}\begin{samepage}
-\enquote{Isn't it ironic that Bitcoin has taught me more about money than all these
-years I've spent working for financial institutions? \ldots including starting my
-career at a central bank}
-\begin{flushright} -- Aaron\footnote{Aaron (\texttt{@aarontaycc}, \texttt{@fiatminimalist}), tweet from Dec.
-12, 2018~\cite{aarontaycc-tweet}}
+\enquote{C'est pas ironique que Bitcoin m'en ait appris plus sur la
+monnaie que toutes ces années à travailler pour des institutions financières ?
+\ldots y compris en ayant commencé dans une banque centrale}
+\begin{flushright} -- Aaron\footnote{Aaron (\texttt{@aarontaycc},
+\texttt{@fiatminimalist}), tweet du 12 déc. 2018~\cite{aarontaycc-tweet}}
 \end{flushright}\end{samepage}\end{quotation}
 
 \begin{quotation}\begin{samepage}
-\enquote{I've learned more about finance, economics, technology, cryptography, human
-psychology, politics, game theory, legislation, and myself in the last three
-months of crypto than the last three and a half years of college}
-\begin{flushright} -- Dunny\footnote{Dunny (\texttt{@BitcoinDunny}), tweet from Nov. 28,
-2017~\cite{bitcoindunny-tweet}}
+\enquote{J'ai plus appris sur la finance, l'économie, la technologie, la
+cryptographie, la psychologie, la politique, la théorie des jeux, la législation
+et moi-même pendant les trois derniers mois dans la crypto que mes trois années
+et demie d'université}
+\begin{flushright} -- Dunny\footnote{Dunny (\texttt{@BitcoinDunny}), tweet du 28
+nov. 2017~\cite{bitcoindunny-tweet}}
 \end{flushright}\end{samepage}\end{quotation}
 
-These are just two of the many confessions all over twitter.\footnote{See
-\url{http://bit.ly/btc-learned} for more confessions on twitter.} Bitcoin, as
-was explored in Lesson \ref{les:1}, is a living thing. Mises argued that
-economics also is a living thing. And as we all know from personal experience,
-living things are inherently difficult to understand.
+Deux exemples des nombreuses confessions que l'on trouve un peu partout sur
+Twitter\footnote{Voir \url{http://bit.ly/btc-learned} pour plus de confessions
+Twitter.}. Bitcoin, comme nous l'avons vu dans la Leçon \ref{les:1}, est un
+organisme vivant. Mises prétendait que l'économie aussi est vivante. Et nous le
+savons tous par expérience, le vivant est difficile à appréhender par nature.
 
 \begin{quotation}\begin{samepage}
-\enquote{A scientific system is but one station in an endlessly progressing
-search for knowledge. It is necessarily affected by the insufficiency
-inherent in every human effort. But to acknowledge these facts does
-not mean that present-day economics is backward. It merely means that
-economics is a living thing --- and to live implies both imperfection
-and change.}
-\begin{flushright} -- Ludwig von Mises\footnote{Ludwig von Mises, \textit{Human Action}
+\enquote{Un système scientifique est simplement une étape atteinte dans la
+recherche indéfiniment continuée de la connaissance. Il est forcément affecté
+par l'imperfection inhérente à tout effort humain. Mais reconnaître ces faits ne
+signifie pas que la science économique de notre temps soit arriérée. Cela veut
+dire seulement qu'elle est chose vivante, et vivre implique à la fois
+imperfection et changement.}
+\begin{flushright} -- Ludwig von Mises\footnote{Ludwig von Mises, \textit{L'Action Humaine}
 \cite{human-action}}
 \end{flushright}\end{samepage}\end{quotation}
 
 \newpage
 
-We all read about various financial crises in the news, wonder about how
-these big bailouts work and are puzzled over the fact that no one ever
-seems to be held accountable for damages which are in the trillions. I
-am still puzzled, but at least I am starting to get a glimpse of what is
-going on in the world of finance.
+On voit tous passer des articles sur diverses crises financières, en se
+demandant comment ces grands sauvetages fonctionnent et nous restons perplexes
+face à l'absence de responsable de ces milliers de milliards de dégâts. Je reste
+perplexe, mais au moins je commence à entrevoir ce qui se passe dans le monde de
+la finance.
 
-Some people even go as far as to attribute the general ignorance on
-these topics to systemic, willful ignorance. While history, physics,
-biology, math, and languages are all part of our education, the world of
-money and finance surprisingly is only explored superficially, if at
-all. I wonder if people would still be willing to accrue as much debt as
-they currently do if everyone would be educated in personal finance and
-the workings of money and debt. Then I wonder how many layers of
-aluminum make an effective tinfoil hat. Probably three.
+Certaines personnes vont jusqu'à attribuer la méconnaissance générale de ces
+sujets à une méconnaissance plus systémique et délibérée. Tandis que l'histoire,
+la physique, la biologie, les maths et les langues font toutes partie de notre
+cursus, l'univers monétaire et financier n'est étonnamment abordé qu'en surface,
+voire pas du tout. Je me demande si les gens continueraient d'accroître la dette
+autant qu'ils le font si nous étions tous éduqués sur la gestion personnelle et
+les rouages de la monnaie et du crédit. Puis je réfléchis à combien de couches
+d'aluminium feraient un bon chapeau. Trois, probablement.
 
 \begin{quotation}\begin{samepage}
-\enquote{Those crashes, these bailouts, are not accidents. And neither is it an
-accident that there is no financial education in school. [...] It's
-premeditated. Just as prior to the Civil War it was illegal to educate a slave,
-we are not allowed to learn about money in school.}
-\begin{flushright} -- Robert Kiyosaki\footnote{Robert Kiyosaki, \textit{Why the Rich
-are Getting Richer}\cite{robert-kiyosaki}}
+\enquote{Ces crashs, ces sauvetages, ce ne sont pas des accidents. Et ce n'est 
+pas non plus par accident qu'il n'y a pas d'éducation financière à l'école.
+[...] C'est prémédité. Comme avant la Guerre Civile où il était illégal
+d'instruire un esclave, nous n'avons pas le droit d'étudier la monnaie à
+l'école.}
+\begin{flushright} -- Robert Kiyosaki\footnote{Robert Kiyosaki, \textit{Pourquoi
+les riches deviennent encore plus riches}\cite{robert-kiyosaki}}
 \end{flushright}\end{samepage}\end{quotation}
 
-Like in The Wizard of Oz, we are told to pay no attention to the man behind the
-curtain. Unlike in The Wizard of Oz, we now have real
-wizardry\footnote{\url{http://bit.ly/btc-wizardry}}: a censorship-resistant,
-open, borderless network of value-transfer. There is no curtain, and the magic
-is visible to anyone.\footnote{\url{https://github.com/bitcoin/bitcoin}}
+Comme dans Le Magicien d'Oz, on nous demande de ne pas prêter attention à
+l'homme derrière le rideau. Contrairement au Magicien d'Oz, nous possédons
+maintenant une véritable
+sorcellerie\footnote{\url{http://bit.ly/btc-wizardry}} : un réseau de transfert
+de valeur, résistant à la censure, ouvert et sans frontières. Il n'y a pas de
+rideau et chacun peut en apprécier la
+magie\footnote{\url{https://github.com/bitcoin/bitcoin}}.
 
-\paragraph{Bitcoin taught me to look behind the curtain and face my financial
-ignorance.}
+\paragraph{Bitcoin m'a appris à regarder derrière le rideau et à surmonter ma
+méconnaissance financière.}
 
 % ---
 %
