--- a/lessons/ch2-12-the-history-and-downfall-of-money.tex
+++ b/lessons/ch2-12-the-history-and-downfall-of-money.tex
@@ -1,215 +1,236 @@
-\chapter{The History and Downfall of Money}
+\chapter{L'histoire et le déclin de la monnaie}
 \label{les:12}
 
-\begin{chapquote}{Lewis Carroll, \textit{Alice in Wonderland}}
-\enquote{They would not remember the simple rules their friends had given them, such
-as, that, if you get into the fire, it will burn you, and that, if you cut your
-finger very deeply with a knife, it generally bleeds, and she had never
-forgotten that, if you drink a bottle marked `poison,' it is almost certain to
-disagree with you, sooner or later.}
+\begin{chapquote}{Lewis Carroll, \textit{Alice au pays des merveilles}}
+\enquote{\ldots ils avaient refusé de se rappeler les simples règles de conduite
+que leurs amis leur avaient enseignées : par exemple, qu’un tisonnier chauffé au
+rouge vous brûle si vous le tenez trop longtemps, ou que, si vous vous faites au
+doigt une coupure très profonde avec un couteau, votre doigt, d’ordinaire, se
+met à saigner ; et Alice n’avait jamais oublié que si l’on boit une bonne partie
+du contenu d’une bouteille portant l’étiquette : poison, cela ne manque presque
+jamais, tôt ou tard, de vous causer des ennuis.}
 \end{chapquote}
 
-Many people think that money is backed by gold, which is locked away in
-big vaults, protected by thick
-walls. This ceased to be true many decades ago. I am not sure what I
-thought, since I was in much deeper trouble, having virtually no
-understanding of gold, paper money, or why it would need to be backed by
-something in the first place.
+Beaucoup de personnes pensent que la monnaie est soutenue par de l'or, qui
+serait enfermé dans de grandes chambres fortes, protégées par d'épais murs. Ce
+n'est plus vrai depuis plusieurs décennies. Je ne suis pas certain de ce que
+j'en ai pensé quand je l'ai appris, puisque j'étais encore plus embêté, n'ayant
+potentiellement aucune compréhension de l'or, de l'argent papier ou même de
+pourquoi il faudrait le soutenir avec quelque chose, pour commencer.
 
-One part of learning about Bitcoin is learning about fiat money: what it
-means, how it came to be, and why it might not be the best idea we ever
-had. So, what exactly is fiat money? And how did we end up using it?
+Un des aspects de l'étude de Bitcoin est l'étude de la monnaie fiduciaire : ce
+que ça signifie, comment c'est apparu et pourquoi c'est peut-être pas la
+meilleure idée que nous ayons eu. Alors, qu'est-ce que la monnaie fiduciaire
+exactement ? Et comment en est-on arrivés à l'utiliser ?
 
-If something is imposed by \textit{fiat}, it simply means that it is imposed by
-formal authorization or proposition. Thus, fiat money is money simply
-because \textit{someone} says that it is money. Since all governments use fiat
-currency today, this someone is \textit{your} government. Unfortunately, you
-are not \textit{free} to disagree with this value proposition. You will quickly
-feel that this proposition is everything but non-violent. If you refuse
-to use this paper currency to do business and pay taxes the only people
-you will be able to discuss economics with will be your cellmates.
+Lorsque quelque chose est imposé par \textit{décret}, ça veut simplement dire
+c'est imposé par une autorisation ou une proposition officielle. Par conséquent,
+la monnaie fiduciaire est monnaie simplement parce que \textit{quelqu'un} le
+décide. De nos jours, comme tous les gouvernements utilisent de la monnaie
+fiduciaire, ce quelqu'un c'est \textit{votre} gouvernement. Malheureusement,
+vous n'êtes pas \textit{libre} d'être en désaccord avec cette proposition de
+valeur. Vous vous apercevrez rapidement qu'elle est tout sauf non-violente. Si
+vous refusez d'utiliser cette monnaie papier pour mener vos affaires et payer
+vos impôts, les seules personnes avec qui vous pourrez parler économie seront
+vos compagnons de cellule.
 
-The value of fiat money does not stem from its inherent properties. How
-good a certain type of fiat money is, is only correlated to the
-political and fiscal (in)stability of those who dream it into existence.
-Its value is imposed by decree, arbitrarily.
+La valeur de la monnaie fiduciaire ne découle pas de ses attributs intrinsèques.
+La qualité d'une catégorie donnée de monnaie fiduciaire n'est corrélée qu'à 
+l'(in)stabilité politique et fiscale de ceux qui la font passer du rêve à la
+réalité. Sa valeur est décrétée, arbitrairement.
 
 \begin{figure}
   \centering
   \includegraphics[width=8cm]{assets/images/fiat-definition.png}
-  \caption{fiat --- `Let it be done'}
+  \caption{fiat --- `Qu'il en soit ainsi'}
   \label{fig:fiat-definition}
 \end{figure}
 
 \paragraph{}
-Until recently, two types of money were used: \textbf{commodity money}, made
-out of precious \textit{things}, and \textbf{representative money}, which simply
-\textit{represents} the precious thing, mostly in writing.
+Jusqu'à récemment, deux sortes de monnaie étaient d'usage : la \textbf{monnaie
+de commodité}, faite de \textit{choses} précieuses ; et la \textbf{monnaie
+représentative}, qui \textit{représente} uniquement la chose précieuse,
+généralement par des jeux d'écriture.
 
 \paragraph{}
-We already touched on commodity money above. People used special bones,
-seashells, and precious metals as money. Later on, mainly coins made out of
-precious metals like gold and silver were used as money. The oldest coin found
-so far is made of a natural gold-and-silver mix and was made more than 2700
-years ago.\footnote{According to the Greek historian Herodotus, writing in the
-fifth century BC, the Lydians were the first people to have used gold and silver
-coinage. \cite{coinage-origins}} If something is new in Bitcoin, the concept of
-a coin is not it.
-
-\newpage
+Nous avons déjà abordé la monnaie de commodité plus haut. Les gens utilisaient
+des os, des coquillages et des métaux précieux comme monnaie. Plus tard, ce sont
+principalement des pièces faites de ces métaux comme l'or ou l'argent qui
+furent utilisées. La plus vieille pièce qu'on ait trouvée jusqu'à aujourd'hui
+est faite d'un alliage naturel d'or et d'argent et a été frappée il y a plus de
+2700 ans\footnote{D'après l'historien grec Hérodote, contemporain du Ve siècle
+avant J.-C., les Lydiens furent le premier peuple à utiliser des pièces d'or et
+d'argent. \cite{coinage-origins}}. S'il y a de l'innovation dans Bitcoin, ce
+n'est pas le concept de pièce.
 
 \begin{figure}
   \centering
   \includegraphics[width=5cm]{assets/images/lydian-coin-stater.png}
-  \caption{Lydian electrum coin. Picture cc-by-sa Classical Numismatic Group, Inc.}
+  \caption{Pièce lydienne en électrum. Crédit photo CC-BY-SA Classical
+  Numismatic Group, Inc.}
   \label{fig:lydian-coin-stater}
 \end{figure}
 
-Turns out that hoarding coins, or hodling, to use today's parlance, is
-almost as old as coins. The earliest coin hodler was someone who put
-almost a hundred of these coins in a pot and buried it in the
-foundations of a temple, only to be found 2500 years later. Pretty good
-cold storage if you ask me.
+\paragraph{}
+Il s'avère que la thésaurisation, ou hodling, pour reprendre le jargon moderne,
+est presque aussi vieille que les pièces elles-mêmes. Le plus ancien hodler de
+pièces était une personne qui a mis une centaine de celles-ci dans une jarre et
+l'a enterrée sous les fondations d'un temple, pour qu'on ne les retrouve qu'au
+bout de 2500 ans. Plutôt un bon stockage à froid si vous voulez mon avis.
 
-One of the downsides of using precious metal coins is that they can be
-clipped, effectively debasing the value of the coin. New coins can be
-minted from the clippings, inflating the money supply over time,
-devaluing every individual coin in the process. People were literally
-shaving off as much as they could get away with of their silver dollars.
-I wonder what kind of \textit{Dollar Shave Club} advertisements they had back
-in the day.
+L'un des inconvénients d'utiliser des pièces faites de métaux précieux est
+qu'elles peuvent être rognées, dépréciant de fait leur valeur. De nouvelles
+pièces peuvent être frappées à partir des copeaux, faisant gonfler l'offre de
+monnaie au fil du temps, dévaluant chaque autre pièce au passage. Les gens
+rabotaient littéralement tout ce qu'ils pouvaient de leurs dollars d'argent. Je
+me demande quel genre de pubs \textit{Dollar Shave Club} faisait à l'époque.
 
-Since governments are only cool with inflation if they are the ones
-doing it, efforts were made to stop this guerrilla debasement. In
-classic cops-and-robbers fashion, coin clippers got ever more creative
-with their techniques, forcing the \enquote{masters of the mint} to get even
-more creative with their countermeasures. Isaac Newton, the
-world-renowned physicist of \textit{Principia Mathematica} fame, used to be one
-of these masters. He is attributed with adding the small stripes at the
-side of coins which are still present today. Gone were the days of easy
-coin shaving.
+Puisque la seule inflation que les gouvernements tolèrent est celle dont ils
+sont responsables, des efforts furent entrepris pour mettre un terme à cette
+guérilla de la dépréciation. Au jeu traditionnel du gendarme et du voleur, les
+rogneurs de pièces ont fait preuve d'imagination dans leurs procédés, forçant
+les \enquote{Maîtres de la Monnaie} à faire preuve d'encore plus d'imagination
+dans leurs contre-mesures. Isaac Newton, le physicien mondialement reconnu,
+auteur de \textit{Principia Mathematica}, était l'un de ces maîtres. C'est à lui
+qu'on attribue l'ajout des stries sur la tranche des pièces que l'on peut
+toujours observer aujourd'hui. L'époque du rognage facile était révolue.
 
 \begin{figure}
   \includegraphics{assets/images/clipped-coins.png}
-  \caption{Clipped silver coins of varying severity.}
+  \caption{Pièces d'argent rognées à divers degrés.}
   \label{fig:clipped-coins}
 \end{figure}
 
-Even with these methods of coin debasement\footnote{Besides clipping, sweating
-(shaking the coins in a bag and collecting the dust worn off) and plugging
-(punching a hole in the middle and hammering the coin flat to close the hole)
-were the most prominent methods of coin debasement. \cite{wiki:coin-debasement}}
-kept in check, coins still suffer from other issues. They are bulky and not very
-convenient to transport, especially when large transfers of value need to
-happen. Showing up with a huge bag of silver dollars every time you want to buy
-a Mercedes isn't very practical.
+Même en gardant un œil sur les procédés de dépréciation des pièces\footnote{En
+plus du rognage, le grippage (secouer les pièces dans un sac et récupérer la
+poussière de métal qui s'est détachée) ainsi que le tamponnage (faire un trou au
+centre de la pièce et l'aplatir au marteau jusqu'à combler le trou) étaient les
+techniques de dépréciation les plus répandues. \cite{wiki:coin-debasement}},
+celles-ci faisaient encore face à d'autres problèmes. Elles sont encombrantes et
+pas très pratiques à transporter, surtout en cas de grands transferts de valeur.
+C'est pas vraiment faisable d'arriver avec un gros sac de dollars en argent
+chaque fois que vous voulez acheter une Mercedes.
 
-Speaking of German things: How the United States \textit{dollar} got its name is
-another interesting story. The word \enquote{dollar} is derived from the German word
-\textit{Thaler}, short for a \textit{Joachimsthaler}~\cite{wiki:thaler}. A
-Joachimsthaler was a coin minted in the town of \textit{Sankt Joachimsthal}.
-Thaler is simply a shorthand for someone (or something) coming from the valley,
-and because Joachimsthal was \textit{the} valley for silver coin production,
-people simply referred to these silver coins as \textit{Thaler.} Thaler (German)
-morphed into daalders (Dutch), and finally dollars (English).
+En parlant de trucs allemands : l'origine du nom du \textit{dollar} américain
+est une autre histoire intéressante. Le mot \enquote{dollar} est dérivé du mot
+allemand \textit{Thaler}, l'abréviation de
+\textit{Joachimsthaler}~\cite{wiki:thaler}. Un Joachimsthaler était une pièce
+frappée dans la ville de \textit{Sankt Joachimsthal}. Thaler est simplement le
+raccourci pour désigner quelqu'un (ou quelque chose) qui vient de la vallée. Et
+puisque Joachimsthal était \textit{la} vallée ou l'on produisait les pièces
+d'argent, les gens appelaient naturellement ces pièces des \textit{Thaler}.
+Thaler (en allemand) a glissé vers daalders (en hollandais) puis finalement vers
+dollars (en anglais).
 
 \begin{figure}
   \centering
   \includegraphics[width=5cm]{assets/images/joachimsthaler.png}
-  \caption{The original `dollar'. Saint Joachim is pictured with his robe and wizard hat. Picture cc-by-sa Wikipedia user Berlin-George}
+  \caption{Le `dollar' originel. Saint Joachim est représenté avec sa robe et
+  son chapeau de mage. Crédit photo CC-BY-SA Wikipedia utilisateur
+  Berlin-George}
   \label{fig:joachimsthaler}
 \end{figure}
 
-The introduction of representative money heralded the downfall of hard
-money. Gold certificates were introduced in 1863, and about fifteen
-years later, the silver dollar was also slowly but surely being replaced
-by a paper proxy: the silver certificate. \cite{wiki:silver-certificate}
+L'introduction de la monnaie représentative sonna le glas de la monnaie dure.
+Les certificats sur l'or furent introduits en 1863 et quinze ans après, le
+dollar d'argent fut lui aussi lentement mais sûrement remplacé par un
+intermédiaire de papier : le certificat sur l'argent.
+\cite{wiki:silver-certificate}
 
-It took about 50 years from the introduction of the first silver
-certificates until these pieces of paper morphed into something that we
-would today recognize as one U.S. dollar.
+Il aura ensuite fallu environ un demi-siècle après l'arrivée des certificats
+pour que ces morceaux de papier se changent en ce que nous connaissons de nos
+jours comme le dollar américain.
 
 \begin{figure}
   \centering
   \includegraphics{assets/images/us-silver-dollar-note-smaller.png}
-  \caption{A 1928 U.S. silver dollar. `Payable to the bearer on demand.' Picture cc-by-sa National Numismatic Collection at the Smithsonian Institution}
+  \caption{Un dollar d'argent américain de 1928. `Payable au porteur sur
+  demande.' Crédit photo CC-BY-SA Collection numismatique nationale de
+  l'institut Smithsonian}
   \label{fig:us-silver-dollar-note-smaller}
 \end{figure}
 
-Note that the 1928 U.S. silver dollar in
-Figure~\ref{fig:us-silver-dollar-note-smaller} still goes by the name of
-\textit{silver certificate}, indicating that this is indeed simply a document
-stating that the bearer of this piece of paper is owed a piece of silver. It is
-interesting to see that the text which indicates this got smaller over time. The
-trace of \enquote{certificate} vanished completely after a while, being replaced
-by the reassuring statement that these are federal reserve notes.
+Notez que le dollar d'argent américain de 1928 dans la
+figure~\ref{fig:us-silver-dollar-note-smaller} porte toujours le nom de
+\textit{certificat sur l'argent}, ce qui indique qu'il s'agit bien d'un document
+stipulant que l'on doit au porteur de ce bout de papier un peu de métal argenté.
+Il est intéressant de remarquer que le texte l'indiquant s'est vu rétrécir au
+fil du temps. La trace du mot \textit{certificat} a fini par totalement
+disparaître, remplacée par la déclaration rassurante qu'il s'agit de billets de
+la réserve fédérale.
 
-As mentioned above, the same thing happened to gold. Most of the world was on a
-bimetallic standard~\cite{wiki:bimetallism}, meaning coins were made
-primarily of gold and silver. Having certificates for gold, redeemable in gold
-coins, was arguably a technological improvement. Paper is more convenient,
-lighter, and since it can be divided arbitrarily by simply printing a smaller
-number on it, it is easier to break into smaller units.
+Nous l'avons évoqué plus haut, il s'est passé la même chose avec l'or. Dans sa
+majorité, le monde fonctionnait sur un étalon
+bimétallique~\cite{wiki:bimetallism}, ce qui signifie que les pièces étaient
+principalement composées d'or et d'argent. C'était à n'en pas douter une avancée
+technologique d'avoir des certificats sur l'or, échangeables contre des pièces
+de ce même métal. Le papier est plus pratique, plus léger et puisqu'il est
+divisible arbitrairement en inscrivant simplement dessus un nombre plus petit,
+il est facile de le réduire en plus petites unités.
 
-To remind the bearers (users) that these certificates were
-representative for actual gold and silver, they were colored accordingly
-and stated this clearly on the certificate itself. You can fluently read
-the writing from top to bottom:
+Afin de rappeler aux porteurs (utilisateurs) que ces certificats représentaient
+de l'or ou de l'argent bien réels, ils revêtaient une couleur évocatrice et
+l'indiquaient clairement en toutes lettres. Vous pouvez facilement lire ce
+message de haut en bas :
 
 \begin{quotation}\begin{samepage}
-\enquote{This certifies that there have been deposited in the treasury of the
-United States of America one hundred dollars in gold coin payable to
-the bearer on demand.}
+\enquote{Il est certifié par la présente que cent dollars en pièces d'or,
+payables au porteur sur demande, ont été déposés au trésor des États-Unis
+d'Amérique.}
 \end{samepage}\end{quotation}
 
 \begin{figure}
   \centering
   \includegraphics{assets/images/us-gold-cert-100-smaller.png}
-  \caption{A 1928 U.S. \$100 gold certificate. Picture cc-by-sa National Numismatic Collection, National Museum of American History.}
+  \caption{Un certificat américain sur l'or de 100\$ de 1928. Crédit photo
+  CC-BY-SA Collection numismatique nationale, Musée National de l'Histoire
+  américaine.}
   \label{fig:us-gold-cert-100-smaller}
 \end{figure}
 
-In 1963, the words \enquote{PAYABLE TO THE BEARER ON DEMAND} were removed from
-all newly issued notes. Five years later, the redemption of paper notes
-for gold and silver ended.
+En 1963, les mots \enquote{PAYABLES AU PORTEUR SUR DEMANDE} furent retirés de
+tous les nouveaux billets. Cinq ans plus tard, il fut mis fin à la
+convertibilité des billets en or ou en argent.
 
-The words hinting on the origins and the idea behind paper money were
-removed. The golden color disappeared. All that was left was the paper
-and with it the ability of the government to print as much of it as it
-wishes.
+Les mots qui rappelaient l'origine de la monnaie papier et l'idée qui
+l'accompagne furent supprimés. La couleur dorée disparut. Il ne restait plus que
+le papier et avec lui, pour le gouvernement, la possibilité d'en imprimer autant
+qu'il le voulait.
 
-With the abolishment of the gold standard in 1971, this century-long
-sleight-of-hand was complete. Money became the illusion we all share to
-this day: fiat money. It is worth something because someone commanding
-an army and operating jails says it is worth something. As can be
-clearly read on every dollar note in circulation today, \enquote{THIS NOTE IS
-LEGAL TENDER}. In other words: It is valuable because the note says so.
+Ce tour de passe-passe long de plus d'un siècle fut achevé en 1971 par
+l'abolition de l'étalon-or. L'argent devint l'illusion que nous partageons tous
+dorénavant : la monnaie fiduciaire. Elle a de la valeur car quelqu'un, qui
+commande une armée et gère des prisons, a dit qu'elle en avait. On peut très
+clairement le lire sur chaque dollar en circulation aujourd'hui, \enquote{CE
+BILLET A COURS LÉGAL}. Autrement dit : il vaut quelque chose parce que c'est
+écrit dessus.
 
 \begin{figure}
   \centering
   \includegraphics{assets/images/us-dollar-2004.jpg}
-  \caption{A 2004 series U.S. twenty dollar note used today. `THIS NOTE IS LEGAL TENDER'}
+  \caption{Un billet américain de vingt dollars de 2004 utilisé de nos jours.
+  `CE BILLET A COURS LÉGAL'}
   \label{fig:us-dollar-2004}
 \end{figure}
 
-By the way, there is another interesting lesson on today's bank notes,
-hidden in plain sight. The second line reads that this is legal tender
-\enquote{FOR ALL DEBTS, PUBLIC AND PRIVATE}. What might be obvious to economists
-was surprising to me: All money is debt. My head is still hurting
-because of it, and I will leave the exploration of the relation of money
-and debt as an exercise to the reader.
+À ce propos, il y a une autre leçon intéressante sur les billets modernes qui se
+cache sous nos yeux. La deuxième ligne indique que le cours légal concerne
+\enquote{TOUTES LES DETTES, PUBLIQUES ET PRIVÉES}. J'ai été surpris par ce qui
+peut paraître une évidence pour les économistes : tout l'argent consiste en de
+la dette. J'en ai encore des migraines, je laisserai donc au lecteur la tâche
+d'étudier le lien entre l'argent et la dette.
 
 \paragraph{}
-As we have seen, gold and silver were used as money for millennia. Over
-time, coins made from gold and silver were replaced by paper. Paper
-slowly became accepted as payment. This acceptance created an
-illusion --- the illusion that the paper itself has value. The final
-move was to completely sever the link between the representation and the
-actual: abolishing the gold standard and convincing everyone that the
-paper in itself is precious.
+Nous l'avons vu, l'or et l'argent ont été utilisés comme monnaie pendant des
+millénaires. Au fil du temps, les pièces d'or et d'argent furent remplacées par
+du papier. Celui-ci a lentement été accepté comme moyen de paiement. Cette
+adoption créa une illusion --- l'illusion que le papier lui-même a de la valeur.
+Le coup de grâce fut de totalement rompre le lien entre la représentation et le
+réel : abolir l'étalon-or en convainquant tout le monde que c'est le papier qui
+est précieux.
 
-\paragraph{Bitcoin taught me about the history of money and the greatest sleight of
-hand in the history of economics: fiat currency.}
+\paragraph{Bitcoin m'a appris l'Histoire de la monnaie et le plus important tour
+de passe-passe dans l'Histoire de l'économie : la monnaie fiduciaire.}
 
 % ---
 %
