--- a/main.bib
+++ b/main.bib
@@ -25,6 +25,7 @@
 @misc{satoshi-set-in-stone,
 	author = "Satoshi Nakamoto",
 	month = "June",
+	publisher = "Bitcointalk Forum",
 	title = "Re: Transactions and Scripts: DUP HASH160 ... EQUALVERIFY CHECKSIG",
 	howpublished = "\url{https://bitcointalk.org/index.php?topic=195.msg1611\#msg1611}",
 	year = "2010"
@@ -606,14 +607,6 @@
 	howpublished = "\url{http://p2pfoundation.ning.com/forum/topics/bitcoin-open-source}",
 	year = "2009"
 }
-@misc{satoshi-set-in-stone,
-	author = "Satoshi Nakamoto",
-	month = "June",
-	publisher = "Bitcointalk Forum",
-	title = "Re: Transactions and Scripts: DUP HASH160 ... EQUALVERIFY CHECKSIG",
-	howpublished = "\url{https://bitcointalk.org/index.php?topic=195.msg1611#msg1611}",
-	year = "2010"
-}
 @misc{satoshi-open-source,
 	author = "Satoshi Nakamoto",
 	month = "December",
@@ -621,14 +614,6 @@
 	title = "Re: Questions about Bitcoin",
 	howpublished = "\url{https://bitcointalk.org/index.php?topic=13.msg46#msg46}",
 	year = "2009"
-}
-@misc{social-contract,
-	author = "Hasu",
-	month = "December",
-	series = "Bitcoin Skeptics Series",
-	title = "Unpacking Bitcoin's Social Contract",
-	howpublished = "\url{https://uncommoncore.co/unpacking-bitcoins-social-contract}",
-	year = "2018"
 }
 @misc{btcwiki:p2sh,
   author = "{Bitcoin Wiki contributors}",
@@ -671,7 +656,7 @@
   howpublished = "\url{https://github.com/mimblewimble/docs/wiki/MimbleWimble-Origin}"
 }
 @article{4chan-math,
-	author = "Anonymous 4chan Poster, Robin Houston, Jay Pantone, and Vince Vatter",
+	author = "{Anonymous 4chan Poster, Robin Houston, Jay Pantone, and Vince Vatter}",
 	month = "October",
 	title = "A lower bound on the length of the shortest superpattern",
   howpublished = "\url{https://oeis.org/A180632/a180632.pdf}",
